--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_russian:
 
 ###Continenetal
  pc_pd_retinal: "Retinal World"
@@ -82,7 +82,7 @@
  trait_pc_pd_kelp_preference: "Ocean Preference"
  trait_pc_pd_kelp_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_algae: "Pink Algae World"
- pc_pd_algae_desc: "Rocky world with a nitrogen-oxygen atmosphere and a significant hydrosphere. Rich pink algae bloom filled oceans cover much of the surface."
+ pc_pd_algae_desc: "A rocky world with a nitrogen-oxygen atmosphere and a significant hydrosphere, this planet's rich shallow seas and lakes support brilliant pink algae blooms, creating a visual spectacle visible from space."
  pc_pd_algae_adj: "pinkish"
  mod_pc_pd_algae_habitability: "Ocean Habitability"
  trait_pc_pd_algae_preference: "Ocean Preference"
@@ -248,7 +248,7 @@
  pc_pd_striped_adj: "stripped"
  mod_pc_pd_striped_habitability: "Arid Habitability"
  trait_pc_pd_striped_preference: "Arid Preference"
- trait_pc_pd_striped_preference_desc: "$trait_pc_arctic_preference_desc$"
+ trait_pc_pd_striped_preference_desc: "$trait_pc_arctic_preference_desc$"02asp[en]
 
 #Savannah
  pc_pd_steppe: "Steppe World"
@@ -591,9 +591,9 @@
  pd_tooltip_alloys: "£alloys£ §Y$alloys$§! from £job_foundry£ $job_foundry_plural$"
  pd_tooltip_culture: "Adds more £mod_job_culture_worker_add£ §Y$job_culture_worker_plural$§!"
  pd_researcher_ending: "§YResearch Points§! from £job_researcher£ $job_researcher_plural$"
- rare_building_warning: "Has mutually exclusive buildings that improve either:"
+ rare_building_warning: "Can construct one of three buildings:"
  #Megaflora`
- pc_pd_megaflora_tooltip: "§YMegaflora Worlds§! are ['concept_pd_rares']\n- £district£ §Y$district_mining_plural$§!: §G+2§!\n- £district£ §Y$district_generator_plural$§!: §G+2%§!\n- Building and District Cost: §R+20%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_minerals$\n$t$- $pd_tooltip_energy$\n$t$- £society£ £engineering£ $pd_researcher_ending$"
+ pc_pd_megaflora_tooltip: "§YMegaflora Worlds§! are ['concept_pd_rares']\n- £district£ §Y$district_mining_plural$§!: §G+2§!\n- £district£ §Y$district_generator_plural$§!: §G+2§!\n- Building and District Cost: §R+20%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_minerals$\n$t$- $pd_tooltip_energy$\n$t$- £society£ £engineering£ $pd_researcher_ending$"
  #Petrified Woods
  pc_pd_petrified_tooltip: "§YPetrified Wood Worlds§! are ['concept_pd_rares']\n- £district£ §Y$district_mining_plural$§!: §G+4§!\n- Building and District Cost: §R+10%§!\n- Housing: §R-10%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_minerals$\n$t$- $pd_tooltip_consumer_goods$\n$t$- £society£ £engineering£ $pd_researcher_ending$"
  #Reef
@@ -632,10 +632,12 @@
  #Uncommon Concepts
  concept_pd_uncommon: "Uncommon Planet"
  concept_pd_uncommons: "Uncommon Planets"
- concept_pd_uncommons_desc: "- Has lower habitability on regular planets\n- Has low spawning odds\n- Has unique terraforming candidates\n- Has special planet modifiers\n- Has mutually exclusive buildings\n- Guaranteed Habitable Worlds are changed to terraforming candidates"
+ concept_pd_uncommons_desc: "- Has lower habitability on regular planets\n- Has low spawning odds\n- Has unique terraforming candidates\n- Has special planet modifiers\n- Has buildings which upgrade with tech\n- Guaranteed Habitable Worlds are changed to terraforming candidates"
 
- #Superhabitables
- pc_pd_superhabitable_tooltip: "§YSuperhabitable Worlds§! are ['concept_pd_uncommons']\n- Planet size is between §G31-35§!\n- Habitability bonuses on other §YSuperhabtiable Worlds§!\n- Can only be §YTerraformed§! between other §YSuperhabitable Worlds§!\n- £district£ §Y$district_farming_plural$§!: §G+4§!\n- Pop Growth Speed: §G+10%§!\n- Building and District Cost: §R+25%§!\n- Habitability: §R-20%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_food$\n$t$- $pd_tooltip_alloys$\n$t$- £society£ $pd_researcher_ending$"
+ ###Maybe one day with autoconcepts - pc_pd_superhabitable_tooltip: "§YSuperhabitable Worlds§! are ['concept_pd_uncommons']\n- Planet size is between §G31-35§!\n- Habitability bonuses on other §YSuperhabtiable Worlds§!\n- Can only be §YTerraformed§! between other §YSuperhabitable Worlds§!\n- £district£ §Y$district_farming_plural$§!: §G+4§!\n- Pop Growth Speed: §G+10%§!\n- Building and District Cost: §R+25%§!\n- Habitability: §R-20%§!\n- $rare_building_warning$\n$t$- ['building:building_superhab_lab']\n$t$- ['building:building_superhab_farm']\n$t$- ['building:building_superhab_foundry']"
+
+ #Uncommon Tooltips
+ pc_pd_superhabitable_tooltip: "§YSuperhabitable Worlds§! are ['concept_pd_uncommons']\n- Planet size is between §G31-35§!\n- Habitability bonuses on other §YSuperhabtiable Worlds§!\n- Can only be §YTerraformed§! between other §YSuperhabitable Worlds§!\n- £district£ §Y$district_farming_plural$§!: §G+4§!\n- Pop Growth Speed: §G+10%§!\n- Building and District Cost: §R+25%§!\n- Habitability: §R-20%§!\n- $rare_building_warning$\n$t$- £society£ $pd_researcher_ending$\n$t$- $pd_tooltip_food$\n$t$- $pd_tooltip_alloys$"
  #Tidally Locked
  pc_pd_tidally_locked_tooltip: "§YTidally Locked Worlds§! are ['concept_pd_uncommons']\n- Habitability bonuses on other §YTidally Locked Worlds§!\n- Can only be §YTerraformed§! between other §YTidally Locked Worlds§!\n- £district£ §Y$district_generator_plural$§!: §G+4§!\n- Max Districts: §R-30%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_energy$\n$t$- $pd_tooltip_food$\n$t$- £physics£ £society£ $pd_researcher_ending$"
  #Cave
