--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -1,15 +1,15 @@
 ﻿l_simp_chinese:
  policy_pd_terraforming: "环境改造"
- policy_pd_terraforming_desc: "我们可以决定科学家对星球进行环境改造的方式。"
- pd_choose_every_planet_terraforming_name: "选择每种群系"
- pd_choose_every_planet: "选择每种群系"
- pd_choose_every_planet_desc: "每当有环境改造项目临近结束时，我们都能为其决定一种生物群系构成。"
- pd_same_as_homeworld_terraforming_name: "与母星一致"
- pd_same_as_homeworld: "与母星一致"
- pd_same_as_homeworld_desc: "所有合适的星球都会被改造为相同的生物群系，其余星球则会改造为随机的群系类型。"
- pd_random_same_class_terraforming_name: "随机相似群系"
- pd_random_same_class: "随机相似群系"
- pd_random_same_class_desc: "我们会在类型相近的生物群系中随机选择一种。"
+ policy_pd_terraforming_desc: "我们可以决定科学家进行环境改造的方式。"
+ pd_choose_every_planet_terraforming_name: "各星球都重选生态构成"
+ pd_choose_every_planet: "各星球都重选生态构成"
+ pd_choose_every_planet_desc: "每当有星球完成环境改造时，都能决定其生态构成类型。"
+ pd_same_as_homeworld_terraforming_name: "生态构成与母星一致"
+ pd_same_as_homeworld: "生态构成与母星一致"
+ pd_same_as_homeworld_desc: "合适的星球均会改造为相同类型，其余的则是随机决定。"
+ pd_random_same_class_terraforming_name: "从相似生态构成中随机选择"
+ pd_random_same_class: "从相似生态构成中随机选择"
+ pd_random_same_class_desc: "会在同星球类别下的生态构成中随机挑选一种。"
  climate_superhabitables: "超级类地"
  climate_cavern: "岩洞"
  climate_tidallyocked: "潮汐锁定"
@@ -152,3 +152,31 @@
  mod_building_aquifer_lab_max: "$building_aquifer_lab$最大建造数量"
  building_storm_lab: "风暴星球｜气象实验室"
  building_storm_lab_desc: "得益于这里的极端天气，人们可以开展针对新型工程技术和气象条件分析的实践研究。"
+ building_gaia_lab: "盖亚星球｜研究中心"
+ building_gaia_lab_desc: "在这个研究中心中，研究人员会对此地的理想环境进行调控和维持，这样经常带来一些千载难逢的研究机会。"
+ building_gaia_unity_admin: "盖亚星球｜行政协调局"
+ building_gaia_unity_admin_desc: "壮丽的园林景致、富有田园情调的公共区域，这都为迷宫般错综复杂的协调办公室增光添彩，显著提升了星球官僚的行政效率。"
+ building_gaia_unity_temple: "盖亚星球｜教会协调局"
+ building_gaia_unity_temple_desc: "壮丽的圣堂事务建筑掩映在恬静的自然风光当中。这番瑰丽的园林之景，会让造访此地的每一位圣职都容光焕发，精神抖擞。"
+ building_gaia_unity_robot: "盖亚星球｜协调中枢"
+ building_gaia_unity_robot_desc: "此地宜人的气温，辅以气象调控系统，可以提升这里的协调者的运算效能。"
+ building_gaia_unity_servitor: "盖亚星球｜活体陈设乐土"
+ building_gaia_unity_servitor_desc: "在这样的理想环境中，要满足智慧有机体的各种需求就容易了许多，要求自主决断的情形也急剧减少。居于其中的有机体的居住需求得到了完全满足。"
+ building_gaia_unity_hive: "盖亚星球｜协调节点"
+ building_gaia_unity_hive_desc: "此地宜人的气温，辅以气象调控系统，为这里的子个体提供了相当舒适的环境，使其能够将更多精力投注于蜂群的团结当中。"
+ building_gaia_resort: "盖亚星球｜度假乐土"
+ building_gaia_resort_desc: "经过调控的气候模式，加上令人震撼的壮丽景色，实在是休闲和理疗的不二之选。"
+ decision_nuked_own_planet: "核爆环境"
+ decision_nuked_own_planet_desc: "我们需要赖以生存的强辐射环境。我们习惯用核弹头来改变环境，满足需求。"
+ mod_planet_bio_trophies_unity_produces_add: "£job_bio_trophy£ $job_bio_trophy_plural$产出的£unity£ $unity$"
+ decision_pd_flood_planet: "拓展行星海洋"
+ decision_pd_flood_planet_desc: "这个海洋星球可以成为我们人民的理想家园。调节海平面，并将城市迁移到水下，我们可以保证那些水下生命的和乐生活。"
+ decision_pd_flood_planet_tooltip: "冰可以通过建有§Y$sm_ice_mining_station$§!的恒星基地从恒星系里采集。\n已添加§Y$pd_aw_flooded_planet$§!修正：\n$pd_aw_flooded_planet_tooltip$"
+ pd_aw_flooded_planet: "星球淹灌"
+ ICE_MINING_PD_PLANET_SUCCESS_TITLE: "行星已被淹灌"
+ ICE_MINING_PD_PLANET_SUCCESS_DESC: "使用$SYSTEM|Y$恒星系开采的冰，我们成功对§Y[This.GetName]§!执行了灌淹。"
+ decision_pd_unflood_planet: "星球去淹灌化"
+ decision_pd_unflood_planet_desc: "这会移除此星球的淹灌生态系统，使其回归原本的状态。"
+ decision_pd_build_dayside_farm: "$decision_build_dayside_farm$"
+ decision_pd_build_dayside_farm_desc: "$decision_build_dayside_farm_desc$"
+ decision_pd_build_dayside_farm_effects_short: "$decision_build_dayside_farm_effects_short$"
