--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_flooded_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_flooded_l_simp_chinese.yml
@@ -1,32 +1,26 @@
 ﻿l_simp_chinese:
-
-#Flooded/Aquatic Planets
- decision_pd_aw_flood_planet: "Expand Planetary Sea"
- decision_pd_aw_flood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
- decision_pd_aw_flood_planet_tooltip: "Ice will be harvested from a systems with an §Y$sm_ice_mining_station$§!\n§Y$pd_aw_flooded_planet$§! modifer added:\n$pd_aw_flooded_planet_tooltip$"
- flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
- decision_pd_aw_unflood_planet: "Unflood Planet"
- decision_pd_aw_unflood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By lowering sea levels and moving cities to islands, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_flood_ringworld: "Flood Ringworld"
- decision_pd_aw_flood_ringworld_desc: "This ringworld has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
- decision_pd_aw_unflood_ringworld: "Unflood Ringworld"
- decision_pd_aw_unflood_ringworld_desc: "This ringworld has the potential to be an ideal home for our people. By lowering sea levels and moving cities back to land, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_unflood_habitat: "Unflood Habitat"
- decision_pd_aw_unflood_habitat_desc: "This habitat has the potential to be an ideal home for our people. By draining this habitat, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_flood_habitat_tooltip: "Habitability: §R-20%§!\nConsidered an §YOcean§! world for §YAquatic§! species.\nIce will be harvested from a system with an §Y$sm_ice_mining_station$§! on the starbase."
-
- flooded_habitat: "Flooded"
- flooded_habitat_desc: "Engulfed by water, this world faithfully mirrors the idyllic environment of aquatic denizens."
- pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
-
- pd_aw_flooded_planet: "Flooded World"
- pd_aw_flooded_planet_desc: "This oceanic planet is an ideal home for aquatic species. Life flourishes for those adapted to live beneath the waves."
- pd_aw_flooded_habitat: "Flooded Habitat"
- pd_aw_flooded_habitat_desc: "This habitat has been flooded with water, imitating the natural environment of Aquatic creatures."
-
- ICE_MINING_PLANET_SUCCESS_TITLE: "Planet Flooded"
- ICE_MINING_PLANET_SUCCESS_DESC: "Using ice mined from the $SYSTEM|Y$ system, we have managed to flood §Y[This.GetName]§!."
-
+ decision_pd_aw_flood_planet: "扩展行星海洋"
+ decision_pd_aw_flood_planet_desc: "这个海洋星球可以成为我们人民的理想家园。调节海平面，并将城市迁移到水下，我们可以保证那些水下生命的和乐生活。"
+ decision_pd_aw_flood_planet_tooltip: "冰可以通过建有§Y$sm_ice_mining_station$§!的恒星基地从恒星系里采集。\n已添加§Y$pd_aw_flooded_planet$§!修正：\n$pd_aw_flooded_planet_tooltip$"
+ flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$：§G+3§!\n$MOD_POP_GROWTH_SPEED$：§G+10%§!\n$mod_planet_jobs_produces_mult$：§G+5%§!\n§Y非水生§!宜居性：§R-20%§!"
+ decision_pd_aw_unflood_planet: "星球去洪潮化"
+ decision_pd_aw_unflood_planet_desc: "这个海洋星球可以成为我们人民的理想家园。调节海平面，并将城市迁移到海岛上，我们可以保证那些陆上生命的和乐生活。"
+ decision_pd_aw_flood_ringworld: "淹灌环世界"
+ decision_pd_aw_flood_ringworld_desc: "这个环世界可以成为我们人民的理想家园。调节海平面，并将城市迁移到水下，我们可以保证那些水下生命的和乐生活。"
+ decision_pd_aw_unflood_ringworld: "环世界去洪潮化"
+ decision_pd_aw_unflood_ringworld_desc: "这个环世界可以成为我们人民的理想家园。调节海平面，并将城市迁移到海岛上，我们可以保证那些陆上生命的和乐生活。"
+ decision_pd_aw_unflood_habitat: "居住站去洪潮化"
+ decision_pd_aw_unflood_habitat_desc: "这个居住站可以成为我们人民的理想家园。排空居住站里的海洋，我们可以保证那些陆上生命的和乐生活。"
+ decision_pd_aw_flood_habitat_tooltip: "宜居性：§R-20%§!\n对§Y水生§!物种，相当于§Y海洋§!星球。\n如果恒星系的恒星基地上有§Y$sm_ice_mining_station$§!，将会从此恒星系开采冰。"
+ flooded_habitat: "洪潮"
+ flooded_habitat_desc: "这个星球被灌满了水，用于模拟水生生物的自然生长环境。"
+ pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$：§G+3§!\n$MOD_POP_GROWTH_SPEED$：§G+10%§!\n$mod_planet_jobs_produces_mult$：§G+5%§!\n§Y非水生§!宜居性：§R-20%§!"
+ pd_aw_flooded_planet: "洪潮星球"
+ pd_aw_flooded_planet_desc: "这个海洋星球是水生物种的理想家园。水下生命生活和乐。"
+ pd_aw_flooded_habitat: "洪潮居住站"
+ pd_aw_flooded_habitat_desc: "这个居住站被灌满了水，用于模拟水生生物的自然生长环境。"
+ ICE_MINING_PLANET_SUCCESS_TITLE: "行星已被淹灌"
+ ICE_MINING_PLANET_SUCCESS_DESC: "使用$SYSTEM|Y$恒星系开采的冰，我们成功对§Y[This.GetName]§!执行了灌淹。"
  ocean_paradise_2: "$ocean_paradise$"
  ocean_paradise_2_desc: "$ocean_paradise_desc$"
  ocean_paradise_hive_2: "$ocean_paradise_hive$"
