--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_lithoid_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_lithoid_l_simp_chinese.yml
@@ -1,50 +1,38 @@
 ﻿l_simp_chinese:
-###Lithoid Planets
-#Decision
- decision_pd_aw_lithoid_planet: "Create Lithotrophic Ecosystem"
- decision_pd_aw_lithoid_planet_desc: "This world waits to be etched into one of crystal and stone. The feeble biological ecosystem sits in our way."
- decision_pd_aw_lithoid_planet_effects_short: "A lithotrophic ecosystem will be chiseled on this world, enabling us to finely tune the crystalline frequencies to better suit our needs."
- decision_pd_aw_lithoid_planet_tooltip: "Once complete, we will be able to choose the frequency of this planet's lithotrophic crystals."
- decision_pd_aw_lithoid_planet_cleanup: "Restore Biological Ecosystem"
- decision_pd_aw_lithoid_planet_cleanup_desc: "We must restore this planet's biological ecosystem to its original glory."
- decision_pd_aw_lithoid_planet_cleanup_effects_short: "The artificially created lithotrophic ecosystem will be removed, restoring it to a biological nature."
- decision_pd_aw_lithoid_planet_cleanup_tooltip: "All Lithotrophic Modifiers will be removed, and the planet will be returned to a biological ecosystem."
- decision_pd_aw_lithoid_change_frequency: "Change Lithotrophic Frequency"
- decision_pd_aw_lithoid_change_frequency_desc: "We will change the frequency of the lithotrophic ecosystem crystals to better suit our needs."
- decision_pd_aw_lithoid_change_frequency_effects_short: "We can change the frequency of this planet's crystals."
- decision_pd_aw_lithoid_change_frequency_tooltip: "The current Lithotrophic modifier will be removed, allowing us to change it to a different frequency."
-
-#Modifiers
- pd_aw_lithoid_planet_cyan: "Lithotrophic World"
- pd_aw_lithoid_planet_cyan_desc: "Frequency: 500 nm\nThe resonating vibrations foster goodwill and catalyze an accelerated growth rate for Lithoids."
- pd_aw_lithoid_planet_red: "Lithotrophic World"
- pd_aw_lithoid_planet_red_desc: "Frequency: 650 nm\nThe robust crystalline resonance synergizes seamlessly with mineral deposits, rendering them more accessible for extraction."
- pd_aw_lithoid_planet_yellow: "Lithotrophic World"
- pd_aw_lithoid_planet_yellow_desc: "Frequency: 580 nm\nThe dynamic harmonics of this crystalline resonance seamlessly integrate with our power networks, unlocking their total capacity."
-
-#Acension Perk
- ap_pd_lithoid_worlds: "Lithotrophic Worlds"
- ap_pd_lithoid_worlds_desc: "We will sculpt our worlds into unyielding lithotrophic paradises, forging a bedrock of eternal stability."
- allow_lithoid_worlds: "§HUnlocks Decision:§! $decision_pd_aw_lithoid_planet$"
- describe_lithoid_worlds: "§YLithotrophic Worlds§! are a special planet class with lithotrophic based ecosystems, which allows for frequency tuning of large crystal structure which can improve $i_unity$, $i_minerals$ or $i_energy$.\n$MOD_LITHOID_POP_HAPPINESS$: §G25%§!\n$mod_LITHOID_pop_growth_speed$: §G20%§!\n$MOD_BIOLOGICAL_POP_HAPPINESS$: §R-50%§!\n$mod_BIOLOGICAL_pop_growth_speed_reduction$: §R-50%§!"
-
-#Notification Message
- MESSAGE_PD_AW_LITHOID_DESC:1 "$PLANET|Y$ is now a §YLithotrophic World§!"
- MESSAGE_PD_AW_LITHOID_MESSAGE_TYPE_TITLE: "Lithotrophic Biome Complete"
- MESSAGE_PD_AW_LITHOID_CLEANUP_DESC:1 "The biological biome on $PLANET|Y$ as been restored."
- MESSAGE_PD_AW_LITHOID_CLEANUP_MESSAGE_TYPE_TITLE: "Lithotrophic Biome Removed"
-
-#Choose Event
- pdawlithoidplanets.100.name: "Crystalline Frequency"
- pdawlithoidplanets.100.desc: "What resonant frequency shall we attune the lithotrophic biome on §Y[This.GetName]§!?"
- pdawlithoidplanets.100.cyan: "Cyan"
- pdawlithoidplanets.100.cyan.tooltip: "This resonating frequency acts as a cohesive force, fostering unity among our lithoid populace and nurturing a harmonious surge in population growth."
- pdawlithoidplanets.100.red: "Red"
- pdawlithoidplanets.100.red.tooltip: "This resonance synergizes seamlessly with mineral deposits, rendering them more accessible and ripe for extraction.""
- pdawlithoidplanets.100.yellow: "Yellow"
- pdawlithoidplanets.100.yellow.tooltip: "This resonating frequency seamlessly integrates with our power networks, unlocking a surge in their total capacity."
-
-#Dummy Classes
+ decision_pd_aw_lithoid_planet: "建立无机营养生态系统"
+ decision_pd_aw_lithoid_planet_desc: "这个星球正等着塑造为岩石和晶体的世界。脆弱的生物生态系统挡住了我们的道。"
+ decision_pd_aw_lithoid_planet_effects_short: "这个世界会被塑造为无机营养生态系统，使我们能够更好地根据需求来精细调整晶体频率。"
+ decision_pd_aw_lithoid_planet_tooltip: "完成之后，我们可以选择此星球的无机营养晶体的频率。"
+ decision_pd_aw_lithoid_planet_cleanup: "修复生物生态系统"
+ decision_pd_aw_lithoid_planet_cleanup_desc: "我们必须修复该星球的生物生态系统，使其重焕生机。"
+ decision_pd_aw_lithoid_planet_cleanup_effects_short: "人工塑造的无机营养生态系统会被移除，恢复其生物本质。"
+ decision_pd_aw_lithoid_planet_cleanup_tooltip: "所有无机营养修正都将被移除，该星球会变回生物生态系统。"
+ decision_pd_aw_lithoid_change_frequency: "变更无机营养频率"
+ decision_pd_aw_lithoid_change_frequency_desc: "我们会变更无机营养生态晶体的频率，从而更好地适应我们的需求。"
+ decision_pd_aw_lithoid_change_frequency_effects_short: "我们会改变该星球晶体的频率。"
+ decision_pd_aw_lithoid_change_frequency_tooltip: "当前无机营养修正会被移除，从而让我们将其变更为另一种频率。"
+ pd_aw_lithoid_planet_cyan: "无机营养星球"
+ pd_aw_lithoid_planet_cyan_desc: "频率：500 nm\n共鸣会培育善意，催动岩石类加速生长。"
+ pd_aw_lithoid_planet_red: "无机营养星球"
+ pd_aw_lithoid_planet_red_desc: "频率：650 nm\n强劲的警惕共鸣与矿藏无缝协同，让它们变得更容易开采。"
+ pd_aw_lithoid_planet_yellow: "无机营养星球"
+ pd_aw_lithoid_planet_yellow_desc: "频率：580 nm\n这种晶体共鸣的动态谐波会与能源网络无缝协同，提升能源网络的总容量。"
+ ap_pd_lithoid_worlds: "无机营养星球"
+ ap_pd_lithoid_worlds_desc: "我们会将我们的星球改造为坚固的无机天堂，锻造成永远稳定的基岩。"
+ allow_lithoid_worlds: "§H解锁决议：§!$decision_pd_aw_lithoid_planet$"
+ describe_lithoid_worlds: "§Y无机营养星球§!是特殊的星球类型，拥有基于无机营养的生态系统。它可以使大型晶体结构产生频率谐调，改善$i_unity$、$i_minerals$或$i_energy$。\n$MOD_LITHOID_POP_HAPPINESS$：§G25%§!\n$mod_LITHOID_pop_growth_speed$：§G20§!\n$MOD_BIOLOGICAL_POP_HAPPINESS$：§R-50%§!\n$mod_BIOLOGICAL_pop_growth_speed_reduction$：§R-50%§!"
+ MESSAGE_PD_AW_LITHOID_DESC:1 "$PLANET|Y$现在是§Y无机营养星球§!了"
+ MESSAGE_PD_AW_LITHOID_MESSAGE_TYPE_TITLE: "无机营养生态已完成"
+ MESSAGE_PD_AW_LITHOID_CLEANUP_DESC:1 "$PLANET|Y$的生物生态已被修复。"
+ MESSAGE_PD_AW_LITHOID_CLEANUP_MESSAGE_TYPE_TITLE: "无机营养生态已移除"
+ pdawlithoidplanets.100.name: "晶体频率"
+ pdawlithoidplanets.100.desc: "我们应该用何种频率谐调§Y[This.GetName]§!的无机营养生态？"
+ pdawlithoidplanets.100.cyan: "青色"
+ pdawlithoidplanets.100.cyan.tooltip: "这种共鸣频率起到内聚力的作用，增强了岩石类民众的团结，还促成人口增长的和睦大潮。"
+ pdawlithoidplanets.100.red: "红色"
+ pdawlithoidplanets.100.red.tooltip: "这种共鸣会与矿藏无缝协同，使其更易于开采，开采的品质也上佳。"
+ pdawlithoidplanets.100.yellow: "黄色"
+ pdawlithoidplanets.100.yellow.tooltip: "这种共鸣频率会与能源网络无缝协同，释放总容量的潮涌。"
  pc_pd_lithoid_cyan: "$DO_NOT_USE$"
  pc_pd_lithoid_cyan_desc: "$DO_NOT_USE$"
  pc_pd_lithoid_cyan_adj: "$DO_NOT_USE$"
