--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_necro_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_necro_l_simp_chinese.yml
@@ -1,7 +1,4 @@
 ﻿l_simp_chinese:
-
-###Necro Planets
-#Dummy Classes
  pc_pd_necro: "$DO_NOT_USE$"
  pc_pd_necro_desc: "$DO_NOT_USE"
  pc_pd_necro_adj: "$DO_NOT_USE"
@@ -38,58 +35,46 @@
  mod_pc_pd_necro_shroud_relic_habitability: "$DO_NOT_USE$"
  trait_pc_pd_necro_shroud_relic_preference: "$DO_NOT_USE$"
  trait_pc_pd_necro_shroud_relic_preference_desc: "$DO_NOT_USE$"
-
-#Decision
- decision_pd_aw_necro_planet: "Build Planetary Necropolis"
- decision_pd_aw_necro_planet_desc: "This world yearns to become a sprawling temple that echos with the whispers of our legacy of eternal significance."
- decision_pd_aw_necro_planet_effects_short: "§Y$district_pd_aw_necro$§! modifier added.\nConstruction of §Y$district_farming_plural$§! replaced with §G$district_pd_aw_necro_plural$§!"
- decision_pd_aw_necro_planet_cleanup: "Remove Planetary Necropolis"
- decision_pd_aw_necro_planet_cleanup_desc: "We must remove the temples and tombs left behind by this planet's previous owners."
- decision_pd_aw_necro_planet_cleanup_effects_short: "§Y$pd_aw_necro_planet$§! modifier will be removed."
-
-#Modifiers
- pd_aw_necro_planet: "Necropolis"
- pd_aw_necro_planet_tooltip: "§GUnlocks Construction§!: £district£ $district_pd_aw_necro_plural$\n§RBlocks Construction§!: £district£ $district_farming_plural$\n£unity£ $unity$ from [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
- pd_aw_necro_planet_desc: "This world is a sprawling temple, its surface echos with the whispers of eternal significance."
+ decision_pd_aw_necro_planet: "建立行星墓城"
+ decision_pd_aw_necro_planet_desc: "这个星球渴望变成一座延绵不断的神殿，回荡我们意义永恒的遗产的低语。"
+ decision_pd_aw_necro_planet_effects_short: "已添加§Y$district_pd_aw_necro$§!修正\n§Y$district_farming_plural$§!的建造会被§G$district_pd_aw_necro_plural$§!取代"
+ decision_pd_aw_necro_planet_cleanup: "移除行星墓城"
+ decision_pd_aw_necro_planet_cleanup_desc: "我们必须移除该星球前主人遗留的神庙和坟墓。"
+ decision_pd_aw_necro_planet_cleanup_effects_short: "§Y$pd_aw_necro_planet$§!修正将被移除。"
+ pd_aw_necro_planet: "墓城"
+ pd_aw_necro_planet_tooltip: "§G解锁建造§!：£district£ $district_pd_aw_necro_plural$\n§R禁用建造§!：£district£ $district_farming_plural$\n[GetAdministratorPluralWithIcon]产生的£unity£ $unity$：§G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$§G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$§R10%§!"
+ pd_aw_necro_planet_desc: "这个星球是一座延绵不断的神殿，地表回荡着意义永恒的低语。"
  pd_aw_necro_city_planet: "$pd_aw_necro_planet$"
  pd_aw_necro_city_planet_desc: "$pd_aw_necro_planet_desc$"
- pd_aw_necro_city_planet_tooltip: "£unity£ $unity$ from [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
- pd_necro_planet: "Necropolis"
- pd_necro_planet_tooltip: "§GUnlocks Construction§!: £district£ $district_pd_aw_necro_plural$\n§RBlocks Construction§!: £district£ $district_farming_plural$\n£unity£ $unity$ from [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
- pd_necro_planet_desc: "This world is a sprawling temple, its surface echos with the whispers of eternal significance."
-
-#Acension Perk
- ap_pd_necro_worlds: "Necro Worlds"
- ap_pd_necro_worlds_desc: "Our world yearn to become a sprawling temple that echos with the whispers of our legacy of eternal significance."
- allow_necro_worlds: "§HUnlocks Decision:§! $decision_pd_aw_necro_planet$"
- describe_necro_worlds: "Non-Urban Planets\n$t$- Unlocks Construction: £district£ ['district:district_pd_aw_necro']\n$t$- Blocks Construction: £district£ ['district:district_farming']\nRingworlds\n$t$- Unlocks Construction: £district£ ['district:district_rw_pd_aw_necro']\n$t$- Blocks Construction: £district£ ['district:district_rw_farming']\n\nUnlocks the §YPlanet Necrosis Beam§! Colossus Weapon §R(requires §Y$ap_colossus$§! Ascension Perk)§!."
-
-#Necropolis District
- district_pd_aw_necro: "Necropolis District"
- district_pd_aw_necro_plural: "Necropolis Districts"
- district_pd_aw_necro_desc: "A testament to our legacy, these spires hold the key to our eternal significance."
- district_rw_pd_aw_necro: "Necropolis Segment"
- district_rw_pd_aw_necro_desc: "A testament to our legacy, endless spires stretch across this Ring World section. They hold the key to our eternal significance."
- district_rw_pd_aw_necro_plural: "Necropolis Segments"
-
-#Notification Message
- MESSAGE_PD_AW_NECRO_DESC:1 "$PLANET|Y$ is now a §Y$pd_aw_necro_planet$§!"
- MESSAGE_PD_AW_NECRO_MESSAGE_TYPE_TITLE: "Planetary Necropolis Complete"
- MESSAGE_PD_AW_NECRO_CLEANUP_DESC:1 "The planetary Necropolis on $PLANET|Y$ as been removed."
- MESSAGE_PD_AW_NECRO_CLEANUP_MESSAGE_TYPE_TITLE: "Necropolis Removed"
-
-#Necro Planet Cracker
- PLANET_KILLER_PD_NECRO_RAY: "Planet Necrosis Beam"
- PLANET_KILLER_PD_NECRO_RAY_DESC: "A spectral tide of nanobots shall cascade upon this world, obliterating robotics and silencing any higher functions of the living. In its wake, a Necropolis shall rise across the landscape."
- PLANET_KILLER_PD_NECRO_RAY_ACTION: "Necromance"
- FLEETORDER_DESTROY_PLANET_WITH_PLANET_KILLER_PD_NECRO_RAY: "Preparing to necromance $PLANET|Y$"
- MESSAGE_DESC_FOR_PLANET_KILLER_PD_NECRO_RAY: "was subjected to a necrotic transformation by"
- pd_necro_ray.02.name: "Planet Necromancy"
- pd_necro_ray.02.desc: "As the column of nanobots descending from the [FromFrom.GetName] dissipates, the surface of [From.GetName] is wholly transformed. Now there is only a Necropolis."
- pd_necro_ray.02.tooltip: "The planet becomes an §Y$pc_pd_necro$§!.\nAll Robot Pops will be destoryed and biological pops will gain the §Y$trait_zombie$§!."
- is_not_necro: "§R$TRIGGER_FAIL$Target is already an §Y$pc_pd_necro$§!§!"
- will_purge_robots_and_zombie: "§RRobotic Pops will be destroyed and biological pops will gain the §Y$trait_zombie$§!§!"
- opinion_pd_necro_a_world: "Necromanced a World"
- opinion_pd_necro_my_world: "Necromanced our World"
- opinion_pd_necro_a_primitive_world: "Necromanced a Primitive World"
+ pd_aw_necro_city_planet_tooltip: "[GetAdministratorPluralWithIcon]产生的£unity£ $unity$：§G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$§G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$§R10%§!"
+ pd_necro_planet: "墓城"
+ pd_necro_planet_tooltip: "§G解锁建造§!：£district£ $district_pd_aw_necro_plural$\n§R禁用建造§!：£district£ $district_farming_plural$\n[GetAdministratorPluralWithIcon]产生的£unity£ $unity$：§G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$§G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$§R10%§!"
+ pd_necro_planet_desc: "这个星球是一座延绵不断的神殿，地表回荡着意义永恒的低语。"
+ ap_pd_necro_worlds: "墓城世界"
+ ap_pd_necro_worlds_desc: "我们的星球渴望变成一座延绵不断的神殿，回荡我们意义永恒的遗产的低语。"
+ allow_necro_worlds: "§H解锁决议：§!$decision_pd_aw_necro_planet$"
+ describe_necro_worlds: "非普世城\n$t$—解锁建造：£district£ ['district:district_pd_aw_necro']\n$t$—禁用建造：£district£ ['district:district_farming']\n环世界\n$t$—解锁建造：£district£ ['district:district_rw_pd_aw_necro']\n$t$—禁用建造：£district£ ['district:district_rw_farming']\n\n解锁§Y行星死光§!巨像武器§R（需要§Y$ap_colossus$§!飞升天赋）§!。"
+ district_pd_aw_necro: "墓城区划"
+ district_pd_aw_necro_plural: "墓城区划"
+ district_pd_aw_necro_desc: "这些尖塔是我们遗存的实证，关乎我们的永恒意义。"
+ district_rw_pd_aw_necro: "墓城区段"
+ district_rw_pd_aw_necro_desc: "无尽的尖塔布满了这个环世界区段，这是我们遗存的实证，关乎我们的永恒意义。"
+ district_rw_pd_aw_necro_plural: "墓城区段"
+ MESSAGE_PD_AW_NECRO_DESC:1 "$PLANET|Y$现在已是§Y$pd_aw_necro_planet$§!"
+ MESSAGE_PD_AW_NECRO_MESSAGE_TYPE_TITLE: "行星墓城已完成"
+ MESSAGE_PD_AW_NECRO_CLEANUP_DESC:1 "$PLANET|Y$上的行星墓城已被移除。"
+ MESSAGE_PD_AW_NECRO_CLEANUP_MESSAGE_TYPE_TITLE: "墓城已被移除"
+ PLANET_KILLER_PD_NECRO_RAY: "行星死光"
+ PLANET_KILLER_PD_NECRO_RAY_DESC: "纳米机器人光潮会席卷整个世界，消灭机器人，压制活物的高级机能。伴随其降临，一座墓城将会拔地而起。"
+ PLANET_KILLER_PD_NECRO_RAY_ACTION: "灭活"
+ FLEETORDER_DESTROY_PLANET_WITH_PLANET_KILLER_PD_NECRO_RAY: "准备灭活$PLANET|Y$"
+ MESSAGE_DESC_FOR_PLANET_KILLER_PD_NECRO_RAY: "被彻底灭活"
+ pd_necro_ray.02.name: "行星灭活"
+ pd_necro_ray.02.desc: "随着从[FromFrom.GetName]降下的纳米机器人光柱逐渐消散，[From.GetName]的表面完全改变了。现在这里只剩一座坟墓。"
+ pd_necro_ray.02.tooltip: "星球变为§Y$pc_pd_necro$§!。\n所有机器人人口都会摧毁，生物人口会获得§Y$trait_zombie$§!特质。"
+ is_not_necro: "§R$TRIGGER_FAIL$目标已经是§Y$pc_pd_necro$§!了§!"
+ will_purge_robots_and_zombie: "§R机器人人口都会摧毁，生物人口会获得§Y$trait_zombie$§!特质§!"
+ opinion_pd_necro_a_world: "灭活了一个星球"
+ opinion_pd_necro_my_world: "灭活了我们的星球"
+ opinion_pd_necro_a_primitive_world: "灭活一个原始星球"
  opinion_pd_necro_a_primitive_world_phile: "$opinion_cracked_a_primitive_world_phile$"
