--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_superprojects_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_superprojects_l_simp_chinese.yml
@@ -1,74 +1,45 @@
 ﻿l_simp_chinese:
-#Planetary Superprojects
- #Notification
- MESSAGE_PD_AW_SUPERPROJECT_DESC: "The superproject on $PLANET|Y$ is complete."
- MESSAGE_PD_AW_SUPERPROJECT_MESSAGE_TYPE_TITLE: "Planetary Superproject Complete"
-
-#Core Tap
- #Planet Class
- pc_pd_core_tap: "Core Tap"
- pc_pd_core_tap_desc: "This rocky world now hosts a vast network of machines burrowing into its core to extract primal energy, a testament to engineering prowess that has destroyed the planet's original ecosystem."
- pc_pd_core_tap_adj: "energetic"
- mod_pc_pd_core_tap_habitability: "Core Tap Habitability"
- trait_pc_pd_core_tap_preference: "Core Tap Prefernce"
+ MESSAGE_PD_AW_SUPERPROJECT_DESC: "$PLANET|Y$的超级工程已经完成。"
+ MESSAGE_PD_AW_SUPERPROJECT_MESSAGE_TYPE_TITLE: "行星超级工程已完成"
+ pc_pd_core_tap: "星核泵"
+ pc_pd_core_tap_desc: "这颗岩石星球现在拥有一套庞大的机械网络，从其地核中开采原始能源。这是工程学伟力的证明，原来的生态系统已因此被摧毁。"
+ pc_pd_core_tap_adj: "能源"
+ mod_pc_pd_core_tap_habitability: "星核泵宜居性"
+ trait_pc_pd_core_tap_preference: "星核泵偏好"
  trait_pc_pd_core_tap_preference_desc: "$trait_pc_arctic_preference_desc$"
-
- #Decision
- decision_pd_aw_core_tap: "Planetary Superproject: Core Tap"
- decision_pd_aw_core_tap_desc: "By creating a network of machines that burrow into the very core of this world, we will be able to generate an incredible amount of energy at the expense of the planet's ecosystem."
- decision_pd_megacoretap_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_generator_plural$§!"
-
- #Modifier
- pd_aw_core_tap: "Core Tap"
- pd_aw_core_tap_desc: "This world boasts a vast network of machines burrowing into its core to extract primal energy, but destorying the orignal ecosystem in the process."
-
- #Technology
- tech_pd_planetary_core_tap: "Planetary Superproject: Core Tap"
- tech_pd_planetary_core_tap_desc: "By creating a network of machines that burrow into the very core of a world, we will be able to generate an incredible amount of energy at the expense of the planet's ecosystem."
- tech_pd_planetary_core_tap_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_core_tap$"
-
-#Agriworld
- #Planet Class
- pc_pd_agriworld: "Agriworld"
- pc_pd_agriworld_desc: "This rocky planet brims with endless industrial farming heavily relying on potent fertilizers, complex weather control, and advanced irrigation systems. While it sustains an unceasing bounty, it has replaced the planet's natural ecosystem."
- pc_pd_agriworld_adj: "agarian"
- mod_pc_pd_agriworld_habitability: "Agriworld Habitability"
- trait_pc_pd_agriworld_preference: "Agriworld Prefernce"
+ decision_pd_aw_core_tap: "行星超级工程：星核泵"
+ decision_pd_aw_core_tap_desc: "建造深入星球地核的机械网络，以生态系统作为代价，我们可以产出数量惊人的能源。"
+ decision_pd_megacoretap_requirements: "£trigger_no£ §R不能有§Y$district_generator_plural$§!以外的其它区划§!"
+ pd_aw_core_tap: "星核泵"
+ pd_aw_core_tap_desc: "这颗星球拥有一套庞大的机械网络，从其地核中开采原始能源，然而原本的生态系统也因此被毁。"
+ tech_pd_planetary_core_tap: "行星超级工程：星核泵"
+ tech_pd_planetary_core_tap_desc: "建造深入星球地核的机械网络，以生态系统作为代价，我们可以产出数量惊人的能源。"
+ tech_pd_planetary_core_tap_tooltip: "§H解锁决议：§!$decision_pd_aw_core_tap$"
+ pc_pd_agriworld: "农耕星"
+ pc_pd_agriworld_desc: "这颗岩石星球上尽是无穷无尽的工业化农场，严重依赖强效肥料、复合气象控制和现金灌溉系统。虽然它维持着无穷无尽的出产，却已经取代星球本来的生态系统。"
+ pc_pd_agriworld_adj: "农业"
+ mod_pc_pd_agriworld_habitability: "农耕世界宜居性"
+ trait_pc_pd_agriworld_preference: "农耕世界偏好"
  trait_pc_pd_agriworld_preference_desc: "$trait_pc_arctic_preference_desc$"
-
- #Decision
- decision_pd_aw_agriworld: "Planetary Superproject: Agriworld"
- decision_pd_aw_agriworld_desc: "By transforming this planet into an Agriworld, we will create vast fields of industrial farming, replacing the natural ecosystem with a bountiful, artificial agricultural expanse."
- decision_pd_agriworld_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_farming_plural$§!"
-
- #Modifier
- pd_aw_agriworld: "Agriworld"
- pd_aw_agriworld_desc: "This world boasts industrial farming that heavily relies on potent fertilizers, complex weather control, and advanced irrigation systems."
-
- #Technology
- tech_pd_planetary_agriworld: "Planetary Superproject: Agriworld"
- tech_pd_planetary_agriworld_desc: "By transforming a planet into an Agriworld, we will create vast fields of industrial farming, replacing the natural ecosystem with a bountiful, artificial agricultural expanse."
- tech_pd_planetary_agriworld_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_agriworld$"
-
-#Stripmine
- #Planet Class
- pc_pd_stripmine: "Stripmine"
- pc_pd_stripmine_desc: "This planet is now an expanse of deep strip-mining operations, its surface crisscrossed by a labyrinth of industrial excavators and drill rigs. The natural ecosystem has been ruined in the ceaseless quest for resources."
- pc_pd_stripmine_adj: "mining"
- mod_pc_pd_stripmine_habitability: "Stripmine Habitability"
- trait_pc_pd_stripmine_preference: "Stripmine Prefernce"
+ decision_pd_aw_agriworld: "行星超级工程：农耕星"
+ decision_pd_aw_agriworld_desc: "将星球改造为农耕世界，我们将建立广阔的工业化农场，用丰饶的人造农业园地取代自然生态。"
+ decision_pd_agriworld_requirements: "£trigger_no£ §R不能有§Y$district_farming_plural$§!以外的其它区划§!"
+ pd_aw_agriworld: "农耕星"
+ pd_aw_agriworld_desc: "这颗岩石星球的工业化农场，严重依赖强效肥料、复合气象控制和现金灌溉系统。"
+ tech_pd_planetary_agriworld: "行星超级工程：农耕星"
+ tech_pd_planetary_agriworld_desc: "将星球改造为农耕世界，我们将建立广阔的工业化农场，用丰饶的人造农业园地取代自然生态。"
+ tech_pd_planetary_agriworld_tooltip: "§H解锁决议：§!$decision_pd_aw_agriworld$"
+ pc_pd_stripmine: "采掘星"
+ pc_pd_stripmine_desc: "这颗星球现在是一片广阔的露天深地矿场，迷宫般复杂的工业挖掘机和钻机在星球表面纵横交错。在对资源的不竭追求中，自然生态已被破坏。"
+ pc_pd_stripmine_adj: "采矿"
+ mod_pc_pd_stripmine_habitability: "采掘星宜居性"
+ trait_pc_pd_stripmine_preference: "采掘星偏好"
  trait_pc_pd_stripmine_preference_desc: "$trait_pc_arctic_preference_desc$"
-
- #Decision
- decision_pd_aw_stripmine: "Planetary Superproject: Stripmine"
- decision_pd_aw_stripmine_desc: "We could collect resources from every inch of this planet's surface by constructing advanced industrial excavators and drill rigs. The natural ecosystem will significantly suffer from the process."
- decision_pd_stripmine_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_mining_plural$§!"
-
- #Modifier
- pd_aw_stripmine: "Stripmine"
- pd_aw_stripmine_desc: "This planet is an expanse of deep strip-mining operations, its surface crisscrossed by a labyrinth of industrial excavators and drill rigs."
-
- #Technology
- tech_pd_planetary_stripmine: "Planetary Superproject: Stripmine"
- tech_pd_planetary_stripmine_desc: "We could collect resources from every inch of a planet's surface by constructing advanced industrial excavators and drill rigs. The natural ecosystem will significantly suffer from the process."
- tech_pd_planetary_stripmine_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_stripmine$"
+ decision_pd_aw_stripmine: "行星超级工程：采掘星"
+ decision_pd_aw_stripmine_desc: "通过建造先进的工业挖掘机和钻机，我们可以从星球表面的每一寸角落搜刮资源。自然生态会受到这一过程的显著影响。"
+ decision_pd_stripmine_requirements: "£trigger_no£§R不能有§Y$district_mining_plural$§!以外的其它区划§!"
+ pd_aw_stripmine: "采掘星"
+ pd_aw_stripmine_desc: "这颗星球是一片广阔的露天深地矿场，迷宫般复杂的工业挖掘机和钻机在地表纵横交错。"
+ tech_pd_planetary_stripmine: "行星超级工程：采掘星"
+ tech_pd_planetary_stripmine_desc: "通过建造先进的工业挖掘机和钻机，我们可以从星球表面的每一寸角落搜刮资源。自然生态会受到这一过程的显著影响。"
+ tech_pd_planetary_stripmine_tooltip: "§H解锁决议：§!$decision_pd_aw_stripmine$"
