--- a/planetary_diversity/localisation/japanese/planetarydiversity_engine_events_l_japanese.yml
+++ b/planetary_diversity/localisation/japanese/planetarydiversity_engine_events_l_japanese.yml
@@ -101,3 +101,16 @@
  pdengine.90.superhabitable_gaia: "$pc_pd_gaia_superhabitable$"
  pdengine.90.cave_gaia: "$pc_pd_gaia_cave$"
  pdengine.90.tidally_locked_gaia: "$pc_pd_gaia_tidally_locked$"
+
+###Uncommon Gaia Terraforming Event
+ pdengine.96.name: "Gaia Terraforming Complete"
+ pdengine.96.desc: "As we finish terraforming §Y[From.GetName]§! we have the opportunity to choose the new biome of this ideal world."
+ pdengine.96.wet_gaia_cave: "Wet Climate"
+ pdengine.96.dry_gaia_cave: "Dry Climate"
+ pdengine.96.cold_gaia_cave: "Cold Climate"
+ pdengine.96.wet_gaia_superhabitable: "Wet Climate"
+ pdengine.96.dry_gaia_superhabitable: "Dry Climate"
+ pdengine.96.cold_gaia_superhabitable: "Cold Climate"
+ pdengine.96.wet_gaia_tidally_locked: "Wet Climate"
+ pdengine.96.dry_gaia_tidally_locked: "Dry Climate"
+ pdengine.96.cold_gaia_tidally_locked: "Cold Climate"
