--- a/planetary_diversity/localisation/russian/planetarydiversity_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_l_russian.yml
@@ -187,6 +187,12 @@
  decision_pd_flood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
  decision_pd_flood_planet_tooltip: "Ice will be harvested from a systems with an §Y$sm_ice_mining_station$§!\n§Y$pd_aw_flooded_planet$§! modifer added:\n$pd_aw_flooded_planet_tooltip$"
  pd_aw_flooded_planet: "Flooded World"
+ decision_pd_unflood_planet: "Unflood World"
+ decision_pd_unflood_planet_desc: "This will remove the flooded ecosystem from this world, bringing it back to it orginal state."
 
  ICE_MINING_PD_PLANET_SUCCESS_TITLE: "Planet Flooded"
- ICE_MINING_pD_PLANET_SUCCESS_DESC: "Using ice mined from the $SYSTEM|Y$ system, we have managed to flood §Y[This.GetName]§!."
+ ICE_MINING_PD_PLANET_SUCCESS_DESC: "Using ice mined from the $SYSTEM|Y$ system, we have managed to flood §Y[This.GetName]§!."
+
+ decision_pd_build_dayside_farm: "$decision_build_dayside_farm$"
+ decision_pd_build_dayside_farm_desc: "$decision_build_dayside_farm_desc$"
+ decision_pd_build_dayside_farm_effects_short: "$decision_build_dayside_farm_effects_short$"
