--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
@@ -1,6 +1,6 @@
 ﻿l_simp_chinese:
  pdengine.21.name: "环境改造完成"
- pdengine.21.desc: "随着[Root.GetName]的环境改造即将完成，我们有机会为该星球选择一类新的生物群系构成。"
+ pdengine.21.desc: "§Y[From.GetName]§!的改造工作已接近尾声，我们获得了一个机会，可为这颗星球重新选择一类生态构成。"
  pdengine.21.continental: "$pc_continental$"
  pdengine.21.retinal: "$pc_pd_retinal$"
  pdengine.21.lake: "$pc_pd_lake$"
@@ -16,7 +16,6 @@
  pdengine.21.crag: "$pc_pd_crag$"
  pdengine.21.fog: "$pc_pd_fog$"
  pdengine.21.kelp: "$pc_pd_kelp$"
- pdengine.21.algae: "$pc_pd_algae$"
  pdengine.21.reef: "$pc_pd_reef$"
  pdengine.21.archipelago: "$pc_pd_archipelago$"
  pdengine.21.tropical: "$pc_tropical$"
@@ -25,8 +24,6 @@
  pdengine.21.mangrove: "$pc_pd_mangrove$"
  pdengine.21.cenote: "$pc_pd_cenote$"
  pdengine.21.fungal: "$pc_pd_fungal$"
- pdengine.21.aerial: "$pc_pd_aerial$"
- pdengine.21.lilypad: "$pc_pd_lilypad$"
  pdengine.21.geothermal: "$pc_pd_geothermal$"
  pdengine.21.biolumen: "$pc_pd_biolumen$"
  pdengine.21.desert: "$pc_desert$"
@@ -50,7 +47,6 @@
  pdengine.21.veld: "$pc_pd_veld$"
  pdengine.21.semi_arid: "$pc_pd_semi_arid$"
  pdengine.21.aspen: "$pc_pd_aspen$"
- pdengine.21.sandstone: "$pc_pd_sandstone$"
  pdengine.21.prairie: "$pc_pd_prairie$"
  pdengine.21.supercontinent: "$pc_pd_supercontinent$"
  pdengine.21.sinkhole: "$pc_pd_sinkhole$"
@@ -68,7 +64,6 @@
  pdengine.21.highland: "$pc_pd_highland$"
  pdengine.21.dune_forest: "$pc_pd_dune_forest$"
  pdengine.21.fjord: "$pc_pd_fjord$"
- pdengine.21.blossom: "$pc_pd_blossom$"
  pdengine.21.glaciovolcanic: "$pc_pd_glaciovolcanic$"
  pdengine.21.lanthanide: "$pc_pd_lanthanide$"
  pdengine.21.tundra: "$pc_tundra$"
@@ -80,3 +75,34 @@
  pdengine.21.cryoflora: "$pc_pd_cryoflora$"
  pdengine.21.lichen: "$pc_pd_lichen$"
  pdengine.21.striped: "$pc_pd_striped$"
+ pdengine.24.name: "盖亚星球改造完成"
+ pdengine.24.desc: "§Y[Root.GetName]§!的改造工作已接近尾声，我们获得了一个机会，可为这颗宜人的星球重新选择一种生态构成。"
+ pdengine.24.wet_gaia: "$pc_pd_wet_gaia$"
+ pdengine.24.dry_gaia: "$pc_pd_dry_gaia$"
+ pdengine.24.cold_gaia: "$pc_pd_cold_gaia$"
+ pdengine.90.name: "$civic_life_seeded$生物群系"
+ pdengine.90.desc: "这颗名为§Y[Capital_scope.GetName]§!的星球，乃是我们发端的乐土。构成我们母星的生态环境是？"
+ pdengine.90.wet_gaia: "$pc_pd_wet_gaia$"
+ pdengine.90.dry_gaia: "$pc_pd_dry_gaia$"
+ pdengine.90.cold_gaia: "$pc_pd_cold_gaia$"
+ pdengine.90.superhabitable_gaia: "$pc_pd_gaia_superhabitable$"
+ pdengine.90.cave_gaia: "$pc_pd_gaia_cave$"
+ pdengine.90.tidally_locked_gaia: "$pc_pd_gaia_tidally_locked$"
+ pdengine.21.crevasse: "$pc_pd_crevasse$"
+ pdengine.21.ice_dunes: "$pc_pd_ice_dunes$"
+ pdengine.21.algae: "$pc_pd_algae$"
+ pdengine.21.aerial: "$pc_pd_aerial$"
+ pdengine.21.sandstone: "$pc_pd_sandstone$"
+ pdengine.21.lilypad: "$pc_pd_lilypad$"
+ pdengine.21.blossom: "$pc_pd_blossom$"
+ pdengine.96.name: "盖亚星球改造完成"
+ pdengine.96.desc: "随着§Y[From.GetName]§!的环境改造即将完成，我们有机会为此理想星球选择一类新的生物群系。"
+ pdengine.96.wet_gaia_cave: "湿润气候"
+ pdengine.96.dry_gaia_cave: "干燥气候"
+ pdengine.96.cold_gaia_cave: "寒冷气候"
+ pdengine.96.wet_gaia_superhabitable: "湿润气候"
+ pdengine.96.dry_gaia_superhabitable: "干燥气候"
+ pdengine.96.cold_gaia_superhabitable: "寒冷气候"
+ pdengine.96.wet_gaia_tidally_locked: "湿润气候"
+ pdengine.96.dry_gaia_tidally_locked: "干燥气候"
+ pdengine.96.cold_gaia_tidally_locked: "寒冷气候"
