--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -1,104 +1,98 @@
 ﻿l_simp_chinese:
- pd_continental: "大陆世界"
+ pd_continental: "陆地世界"
  pd_continental_desc: "被海洋分割开的大陆，随经纬度不同有不同的季节温度。"
  pd_retinal: "视醛光合世界"
- pd_retinal_desc: "植物的演化基于视黄醛光合作用，而非叶绿素光合作用——这令星球呈现独特的紫色色调。"
+ pd_retinal_desc: "植物光合作用基于视黄醛，而不是叶绿素。令星球呈现独特的紫色色调。"
  pd_lake: "湖泊世界"
- pd_lake_desc: "其陆地是彼此相连的一片整体，遍布着数以百万计的大小各异的湖泊，这里可以找到从亚热带类型到亚寒带类型的各种气候。"
+ pd_lake_desc: "整个星球是一片由无数大小各异的湖泊组成的“马赛克拼贴画”。"
  pd_forest: "森林世界"
- pd_forest_desc: "水圈富有活力，又非常稳定。陆地面积广大，稠密的森林囊括了陆地的近乎全部区域。"
+ pd_forest_desc: "地表森林稠密，形成蔓延整片大陆的无尽树海。"
  pd_tepid: "温煦世界"
- pd_tepid_desc: "这个世界基本不存在黄赤交角，其理想的生存条件，令种类繁多的光合作用过程得以演化和共存。"
+ pd_tepid_desc: "这个世界基本不存在黄赤交角，理想的环境形成了多样化的光合作用过程，因而植物展现出生机盎然的色彩组合。"
  pd_mushroom: "蕈菌大陆世界"
- pd_mushroom_desc: "菌丝体和真菌生物主导着星球生态系统，大部分地区的主要环境都是蕈菌林和原野。"
+ pd_mushroom_desc: "真菌主宰着星球生态系统，广阔的蕈林和蕈原覆盖了大片区域。"
  pd_temperate: "温带世界"
- pd_temperate_desc: "温和的气候，以及丰富的生物多样性，让这个星球环境宜人。"
+ pd_temperate_desc: "这个世界气候温和，几乎每一块陆地都有丰富的生物多样性。"
  pd_megaflora: "巨木世界"
- pd_megaflora_desc: "繁盛的巨木星球上有着丰富的巨型植物种群，其巨大的根部往往能挖掘出宝贵的矿藏，还能产生富含能量的汁液加以利用。在巨型植物周围进行建设也意味着比通常情况更昂贵的建造花费。"
+ pd_megaflora_desc: "巨木覆盖了星球地表，其庞大的根底向下延伸有数英里之深。在此类罕见植物周围进行建设成为了一项富有挑战的任务。"
  pd_petrified: "木化石世界"
- pd_petrified_desc: "木化石可以用作建筑材料，但是要消耗相当的投入才能移除它们从而充作建设之用。"
- pd_ocean: "大洋世界"
+ pd_petrified_desc: "这里曾经覆盖着分布广泛的巨木，形成了如今的巨大化石遗存。这些奇特的类木材料可以用于建筑用途，尽管要花费相当的投入才能将之开采出来。"
+ pd_ocean: "海洋世界"
  pd_ocean_desc: "海洋覆盖了§Y90%§!以上的表面，剩下的陆地均为岛屿。"
  pd_cascadian: "海洋雨林世界"
- pd_cascadian_desc: "沿海森林和巍峨的山脉组成的亚温带山地地貌。拥有活跃的水圈循环、常有暴雨。季节差异明显，夏天短暂而温暖，冬季则降雪颇多。"
+ pd_cascadian_desc: "这种环境由亚温带沿海森林和巍峨的山脉组成。在温和的冬季与短暂温暖的夏季之间，富有活力、常伴风暴的星球水体呈现出鲜明的反差。"
  pd_swamp: "湿地世界"
  pd_swamp_desc: "星球上大部分地区都覆盖着林木茂盛的湿地。水圈强大而稳定，主要由浅海、湿地和沼泽构成，养育着丰富的动植物生命。"
  pd_crag: "峭壁世界"
  pd_crag_desc: "海洋和极地冰冠覆盖着大部分地表，其间点缀着繁多的岛屿，地势崎岖，常有地震。"
  pd_fog: "云雾世界"
- pd_fog_desc: "海水覆盖大部分地表，环境中湿度极高，因而丰茂的森林与草原上空常年云雾弥漫。"
+ pd_fog_desc: "海水覆盖大部分地表，环境中湿度极高，因而陆地上空常年云雾弥漫，支持着内陆的繁茂森林和广阔草原。"
  pd_kelp: "巨藻世界"
- pd_kelp_desc: "海洋覆盖了大部分地表。富饶的浅海滋养着丰富多样的生命以及几近蔓延全球的巨藻林。"
+ pd_kelp_desc: "海洋覆盖了此星球的大部分地表，富饶的浅海孕育出广袤的巨藻林。这一水下生态系统生机勃勃，支撑着星球表面引人注目的丰富生命形态。"
  pd_reef: "珊瑚礁世界"
- pd_reef_desc: "90%地表都是浅海，在星球轨道上可以直接看到隐藏在水面下的规模巨大的礁脉体系。有些地方的礁脉生长到高出水面，因而形成星罗棋布的礁脉链，成为仅有的露出海面的陆地。"
+ pd_reef_desc: "星球表面都是浅海，从轨道上可以看到水面下的巨大礁脉体系。礁脉高出水面形成了珊瑚岛链。"
  pd_archipelago: "火山列岛世界"
- pd_archipelago_desc: "地表全是海洋，群岛点缀其间。丰富的火山活动使岛屿以很高的速度形成又消失，地貌一直在不停变动。"
- pd_tropical: "丛林世界"
+ pd_archipelago_desc: "地表全是海洋，群岛点缀其间。剧烈火山活动突然涌现又突然消失，地貌一直在不停变动。"
+ pd_tropical: "热带世界"
  pd_tropical_desc: "气候变化巨大，旱季和雨季交替明显。绝大部分大陆上都覆盖着茂盛的植被。"
  pd_atoll: "环礁世界"
- pd_atoll_desc: "浅潟湖、珊瑚礁和热带群岛构成了整个星球的主要环境，温暖的温度支撑着一个非常庞大的生物圈。"
+ pd_atoll_desc: "丰富的浅潟湖、复杂的珊瑚礁、植被繁茂的热带群岛是此地的主要环境。宜人的温度孕育出繁盛的生物圈。"
  pd_tepui: "高原莽丛世界"
- pd_tepui_desc: "该星球拥有规模巨大的水圈，地表存在非常繁盛的植物群落，高低海拔环境迥异。在峻峭的台地高原上，气温较为凉爽，降雨丰沛；地势较低的地方则更加温暖、潮湿，发育出繁茂的丛林。"
+ pd_tepui_desc: "该星球拥有规模巨大的水圈，地表植物繁茂，高低海拔环境迥异。在峻峭的台地高原上，气温较为凉爽，降雨丰沛；地势较低的地方则更加温暖、潮湿，发育出繁茂的丛林。"
  pd_mangrove: "红树林世界"
- pd_mangrove_desc: "大部分区域被浅海覆盖，几乎没有高出海平面的陆地。从现有的少数岛屿的海岸地带开始，丛林可以向海洋绵延数百英里。水圈强力而稳定，供养着异常丰富的动植物。"
+ pd_mangrove_desc: "大部分区域被浅海覆盖，几乎没有高出海平面的陆地。从现有的少数岛屿的海岸地带开始，丛林可以向海洋绵延数百英里。"
  pd_cenote: "溶井世界"
- pd_cenote_desc: "在星球地表以下，巨大的地陷和地下水系构成复杂、蜿蜒的体系。陆地的多数区域都生长着繁茂的植被。"
+ pd_cenote_desc: "稀疏的热带森林覆盖着地表，大部分水体都被滤进复杂的地下系统中，滋养着互相关联的生态系统和丰富多样的生物。"
  pd_fungal: "蕈菌丛林世界"
- pd_fungal_desc: "季节差异明显，绝大部分大陆上都覆盖着繁茂的蕈菌林。"
- pd_aerial: "Aerial Seeds World"
- pd_aerial_desc: "High above the landmasses cloaking in dense vegetation, colossal seed pods, borne by the planet's unique flora, glide through the skies like clouds."
- pd_lilypad: "Lilypad World"
- pd_lilypad: "This planet's warm, shallow oceans support vibrant biodiversity. At the surface, sturdy leaves from aquatic flora form a secondary surface-based ecosystem."
+ pd_fungal_desc: "蕈基植被构成了繁盛的生物圈的基础，从微小的刨子到参天巨菇，生命形态丰富多样。"
  pd_geothermal: "地热世界"
- pd_geothermal_desc: "受到天然地热喷口加热的热带裂谷打破了广袤的冰层。冰雪融水和喷口中袅袅的蒸汽构成了这里的水圈。"
+ pd_geothermal_desc: "生机勃勃的热带裂谷散布于高耸的冰崖之间。地表下的强大地热活动维持着数百万个暖池，孕育出繁盛多样的生命形式。"
  pd_biolumen: "生物光世界"
- pd_biolumen_desc: "大气中奇异但无毒的颗粒导致这个星球被几乎不变的云层覆盖。尽管如此，由于温室效应和地热活动，生命在地表蓬勃发展。几乎所有的动植物都具有发光特性。"
- pd_desert: "大漠世界"
- pd_desert_desc: "几乎没有大片水体或者降水存在。昼夜温差巨大。很少有植物，但只要有适量降雨就能使沙漠变得生机勃勃。"
+ pd_biolumen_desc: "大气微粒笼罩着这颗星球，但近乎所有生命都适应了生物光，创造出轨道上也清晰可见的奇景。"
+ pd_desert: "沙漠世界"
+ pd_desert_desc: "稀少的降水、昼夜循环的温度变化是这里的标志。凭借偶尔的降雨，稀疏的制备在沙漠中顽强生存。"
  pd_dune: "沙丘世界"
- pd_dune_desc: "地表上相当可观的面积受到沙海的覆盖。水体主要是地下水层，其中的水会从绿洲和山泉中涌出。"
+ pd_dune_desc: "无尽的沙丘是这里的主要特征。稀缺的水体主要存在于地下水层，从绿洲和山泉中零星涌出。"
  pd_oasis: "绿洲世界"
- pd_oasis_desc: "水源仅足以维持一个环绕生长着植被带的大型水体，大部分时候降水都难以触及占据了最多地表区域的内陆沙漠。"
- pd_outback: "荒漠世界"
- pd_outback_desc: "干旱或半干旱的灌丛和荒漠覆盖了星球上的大部分地方，环水域地带植被较多。水体主要是一些内陆海和天然地下泉。"
+ pd_oasis_desc: "水源仅足以维持一个环绕生长着植被带的大型水体。降水几乎无法触及占据大部分地表区域的内陆沙漠。"
+ pd_outback: "荒原世界"
+ pd_outback_desc: "干旱或半干旱的灌丛和荒漠覆盖了星球上地表，环水域地带植被较多。水体主要是一些内陆海和天然地下泉。"
  pd_coastal: "海岸漠境世界"
- pd_coastal_desc: "水体主要为寒冷、深邃的大洋，洋流使大气高度稳定，抑制陆地降水，却允许雾霭的存在——这提供了充足的水分，可以维持各类地衣、多肉植物和灌木的生存。"
+ pd_coastal_desc: "深洋使大气高度稳定，抑制陆地降水。普遍的雾霭维持各类多肉植物和灌木的生存。"
  pd_fungi: "蕈菌沙漠世界"
- pd_fungi_desc: "此地气候干燥，地表覆盖着火山灰，到处都生长有能够忍耐高温、干旱与养分匮乏的沙漠真菌。"
+ pd_fungi_desc: "此地气候干燥，地表覆盖着火山灰，生长着能够忍耐高温、干旱与养分匮乏的沙漠真菌。"
  pd_salt: "盐晶世界"
- pd_salt_desc: "尽管这里遍地都是丰饶的矿脉，地表环境却很不适宜动植物的生存。"
+ pd_salt_desc: "尽管这里遍地都是丰饶的矿脉，高盐的地表环境却很不适宜动植物生存。"
  pd_aquifer: "蓄水层世界"
- pd_aquifer_desc: "尽管沙子没法提供很多宜居地带，不断移动的泄湖和地下水系中却蕴藏着丰富而独特的生命形态，是水基农业的理想之地。"
- pd_arid: "贫瘠世界"
- pd_arid_desc: "沙尘飞扬的星球表面多是峭壁和峡谷，可以在气候更加温和的极地地区发现树林，但其它植物比较稀缺。"
+ pd_aquifer_desc: "尽管沙子无法疏解酷热，不断移动的泄湖和地下水系，却承载着奇特的生态系统和丰富多样的生命形式。"
+ pd_arid: "干旱世界"
+ pd_arid_desc: "沙尘飞扬的星球表面多是峭壁和峡谷。植被稀少，但是极地地区森林繁茂。"
  pd_mesa: "台地世界"
- pd_mesa_desc: "巨大的高原和平顶山地貌在赤道地区随处可见，而极地地区则森林密布，更为凉爽。主要的水体是那些被刀削般的峭壁拱卫，河床上植物繁茂的大河。"
+ pd_mesa_desc: "赤道高原和极地森林是这里的主要环境。主要的水体是峭壁间的大河，河床上植物繁茂，景观各异。"
  pd_fog_desert: "雾漠世界"
  pd_fog_desert_desc: "海拔极高的山峰导致了大部分地区都存在的雨影现象，盐坪和干谷是高原地区的普遍地貌。水体主要是一些湖泊和山泉。"
  pd_mediterranean: "地中海世界"
- pd_mediterranean_desc: "水源仅可维持几个大型内陆海，周围生长着稀疏的草木和灌丛。远离水域的地区环境非常干旱。"
+ pd_mediterranean_desc: "水源维系着广阔的内陆海，周围生长着稀疏的植被。内陆地区降水稀少，非常干旱。"
  pd_badlands: "恶地世界"
- pd_badlands_desc: "沉积岩和黏土土壤会受到风蚀和水蚀，是这片干旱的环境中最普遍的事物。植被极少，大多为低矮的灌木和坚韧的禾本植物。"
- pd_succulent: "多肉植物世界"
+ pd_badlands_desc: "干旱的环境中遍布着风蚀和水蚀塑成的沉积岩和黏土土壤。植被大多为山阴生长的灌木和杂草。"
+ pd_succulent: "肉质植物世界"
  pd_succulent_desc: "气温炎热，偶有降雨却也雨量稀少，因而本地的草木发育出了种种保持水分的手段。"
  pd_coral: "陆珊瑚世界"
  pd_coral_desc: "这里曾覆盖着海洋，由于生态因素的变化，现今却水源近无。此地的珊瑚丛已经适应了这种干旱的环境。"
  pd_primal: "原始世界"
  pd_primal_desc: "这个年轻星球的火山活动已经减弱，繁衍出了愈发复杂的动植物群，有助于塑成可呼吸的大气层和逐渐稳定的水圈。"
- pd_savannah: "稀树草原世界"
- pd_savannah_desc: "较小的水圈只能支持短暂的雨季。除了几种比较普遍的杂草，其它的植被主要存在于绿洲附近。"
+ pd_savannah: "草原世界"
+ pd_savannah_desc: "较小的水圈只能支持短暂的雨季。植被主要为比较普遍的杂草，大多存在于绿洲附近。"
  pd_steppe: "冷草原世界"
- pd_steppe_desc: "半干旱草原中分布着起伏的山丘和平原，乃是陆地上的主要景观。尽管几乎没有林木，雨量尚足以维持灌木和草禾。"
+ pd_steppe_desc: "半干旱草原中分布着起伏的山丘和平原，乃是陆地上的主要景观。尽管几乎没有林木，断断续续的降雨尚足以维持灌木和草禾。"
  pd_prairie: "温和草原世界"
- pd_prairie_desc: "水体和降水会呈现季节性变化。拥有一整片广袤的陆地，以及大型内陆海洋。夏季短暂而干燥，冬季则寒冷严酷。"
+ pd_prairie_desc: "水体和降水会呈现季节性变化。这是一整片广袤的陆地，大型内陆海分布其间。夏季短暂而干燥，冬季则寒冷严酷。"
  pd_veld: "莽原世界"
  pd_veld_desc: "亚热带环境，到处皆是灌丛林地和开阔的草原。冬季较为温和，夏季则又长又热。"
  pd_semi_arid: "半干旱世界"
- pd_semi_arid_desc: "此处的水圈维系着短暂却雨量丰沛的湿季。广泛分布的数类杂草之外也有其他类型的草木，都集中生长在受遮蔽谷地和大型水域的周边地带。"
+ pd_semi_arid_desc: "此处的水圈维系着短暂却雨量丰沛的湿季。草木集中生长在受遮蔽的谷地中和大型水域周边地带。"
  pd_aspen: "森林草原世界"
  pd_aspen_desc: "森林与草原互相交错，是这里的主要环境。水圈的规模较小，却也非常稳定。溪流与河谷供养着此地的森林和茂盛的灌丛。"
- pd_sandstone: "$pc_pd_sandstone$"
- pd_sandstone_desc: "$pc_pd_sandstone_desc$"
  pd_supercontinent: "超大陆世界"
  pd_supercontinent_desc: "板块构造还处于单一的超大陆状态。临近沿海的地区拥有繁茂的草木，内陆的环境则截然不同，由草原逐渐过渡为庞大的干燥荒漠。"
  pd_sinkhole: "地陷世界"
@@ -108,7 +102,7 @@
  pd_cold_desert: "寒漠世界"
  pd_cold_desert_desc: "降水稀少，地表罕有大型水域。即使在白天，平均温度也常常处于冰点以下。"
  pd_glacial: "冰川世界"
- pd_glacial_desc: "每年的大部分时候，水体主要都是经久不化的冰川，不过夏季时节会有非常可观的冰雪融水。降雪非常普遍。地热活动在冰层中塑出长久存在的空洞，支撑起厚冰之下丰富的海洋生命。"
+ pd_glacial_desc: "每年的大部分时候，水体主要都是经久不化的冰川，不过夏季时节会有非常可观的冰雪融水。降雪非常普遍。"
  pd_antarctic: "冰原世界"
  pd_antarctic_desc: "冬季的风速可以达到25km/h以上，生命只能蜷缩在一些偏僻的地方，比如海冰下面，洞穴深处，或者能遮风挡雪的山谷里面。"
  pd_aeolian: "风蚀世界"
@@ -119,72 +113,70 @@
  pd_storm_desc: "主要陆地均分布在两极附近，终年风暴不息的辽阔海洋将它们分隔开来。由于极端的环境条件，生命大都生活在洋面以下。"
  pd_iceberg: "冰山世界"
  pd_iceberg_desc: "虽然气温常会低于冰点，覆盖星球的高盐海洋却并未因此而封冻。半永久的冰山中集合了所有淡水资源；海水中拥有非常繁茂的大型藻群。"
- pd_alpine: "高寒世界"
+ pd_alpine: "高山世界"
  pd_alpine_desc: "积雪终年覆盖山顶，山谷点缀着冻结的湖泊。虽然这个行星只有微小的季节变化，但在冻结的湖面底下仍然流动着液态水，并且足以维持一些耐寒植物的日常所需。 "
- pd_boreal: "北风世界"
- pd_boreal_desc: "星球气候为副极地类型，冬季漫长而寒冷，夏季短暂而温暖，全年温差巨大。寒带针叶林遍布于较为温暖的中低纬度地区，极地地区的环境则是苔原和冰川。"
+ pd_boreal: "亚寒带世界"
+ pd_boreal_desc: "星球气候为副极地类型，全年温差巨大。寒带针叶林遍布于较为温暖的中低纬度地区，极地地区的环境则是苔原和冰川。"
  pd_snow: "霜雪世界"
  pd_snow_desc: "此星球正在经历严峻的冰期；中高纬度地区皆被冰川覆盖，而赤道附近拥有繁茂的温带森林。"
  pd_highland: "高原世界"
- pd_highland_desc: "此地天气变幻莫测，云雾缭绕乃是常态。拥有较为稳定的水体分布，主要是山川冰雪和庞大的内陆海，供养着生命力顽强的杂草和苔藓。"
+ pd_highland_desc: "持续的降水和缭绕的云雾乃是常态。水体分布较为稳定，主要是山川冰雪和庞大的内陆海，供养着生命力顽强的杂草和苔藓。"
  pd_dune_forest: "森林沙丘世界"
  pd_dune_forest_desc: "这里雾气丰沛，不过降水较少；低地都是干燥的沙丘，山上则森林茂密、白雪皑皑。"
  pd_fjord: "峡湾世界"
- pd_fjord_desc: "这里拥有巨大的海洋，深邃狭长的海湾深深嵌入陆地之中。季节之间有明显变化，沿海生长着丰饶的副极地雨林，山地气候的高海拔地带也是草木繁茂。"
- pd_blossom: "Blossom World"
- pd_blossom_desc: "This planet's rich grasslands are adorned with vibrant flowering flora, presenting a spectacle visible from orbit."
+ pd_fjord_desc: "巨大的海洋深深嵌入陆地之中，孕育出沿海的副极地玉林和高海拔地区的山地草原。"
  pd_glaciovolcanic: "冰川火山世界"
  pd_glaciovolcanic_desc: "这里的火山活动非常活跃，因而形成了丰富的地热湖泊，将罕见的矿物和能源带到冰封的地表。"
  pd_lanthanide: "镧星"
- pd_lanthanide_desc: "这里拥有异常丰富的稀土金属和地磁活动，这些自然现象共同塑造出令人惊叹的环状山顶。此地气候寒冷，几乎没有季节变化，水源勉强可以维持一些耐寒植被。"
- pd_tundra: "冻土世界"
- pd_tundra_desc: "除了更温和的赤道地区以外，大部分地表都被永久冻土层覆盖。这里存在一个稳定的生物圈，但植被大多仅限于苔藓和地衣。"
+ pd_lanthanide_desc: "稀土金属和地磁活动塑造出令人惊叹的环状山顶。此地几乎没有季节变化，水源勉强可以维持一些耐寒植被。"
+ pd_tundra: "苔原世界"
+ pd_tundra_desc: "此地拥有稳定的水体与平稳的低温；在险峻的山岭和冰川之间生长着大量地衣。"
  pd_bog: "沼泽世界"
- pd_bog_desc: "此地的夏季湿润而短暂，冬季寒冷而漫长，全年的降水量相当可观。陆地上是一片湿漉漉的环境，泥水中浸泡着顽强而又繁茂的草木。"
+ pd_bog_desc: "此地的夏季湿润而短暂，冬季寒冷而漫长，全年的降水量相当可观。陆地上密集的沼泽构成了强健的水体。"
  pd_mycelium: "蕈菌冻原世界"
  pd_mycelium_desc: "除了凉爽而短暂的夏季之外，一年中的其他时候都处于又干又冷的冬季。在中纬度地区，随处可见高大的蕈菌形成广袤的丛林，还有蔓延各地的，庞大又密集的地下菌丝网。"
  pd_mud: "泥浆世界"
- pd_mud_desc: "此地的季节差异不太明显，拥有丰富的降水。地热活动分布广泛且强度很高，因而地表上分布有难以计数的泥火山和热泥湖，不过除此以外的环境都是寒冷的荒原。"
+ pd_mud_desc: "此地的季节差异不太明显，拥有丰富的降水。地表的低强度地热活动在冻原上塑成无数泥湖和泥火山。"
  pd_basalt: "玄武岩世界"
- pd_basalt_desc: "此地季节差异不太明显。由于断断续续的火山活动，大片陆地都是广袤的玄武岩熔岩原。苔藓和地衣扎根在这些冷却下来的玄武岩上，存在有稳定的生物圈。"
+ pd_basalt_desc: "此地季节差异不太明显。断断续续的火山活动，产生了广袤的熔岩原。苔藓和地衣扎根在这些冷却下来的玄武岩上，存在有稳定的生物圈。"
  pd_tuya: "平顶火山世界"
- pd_tuya_desc: "此地季节间差异不太明显，冬季漫长而严酷。尽管如此，得益于火山土中的营养物质，依然有稳定的生物圈立足于此。广袤的冰盖和丰富的火山活动共同塑造出那些星罗棋布的冰下火山。"
+ pd_tuya_desc: "此地季节间差异不太明显，冬季漫长而严酷。得益于火山土中的营养物质，存在着稳定的生物圈。冰下火山星罗棋布。"
  pd_cryoflora: "冰雪植物世界"
  pd_cryoflora_desc: "气温经常低至冰点以下，水主要以冰雪的形式存在。尽管如此，此地的动植物却演化出抗冻蛋白，因而发展出富有生机和活力的生态系统。"
  pd_lichen: "地衣世界"
- pd_lichen_desc: "此地拥有稳定的水体与大体可预测的寒冷气温；在险峻的山岭和冰川之间生长着星球规模的广袤地衣林，它们从矿物中吸收无机质作为养分。"
+ pd_lichen_desc: "此地拥有稳定的水体与平稳的低温；在险峻的山岭和冰川之间生长着地衣林，它们从矿物中吸收无机质作为养分。"
  pd_wet_superhabitable: "超级类地世界（湿润）"
- pd_wet_superhabitable_desc: "这个湿润的超级类地星球上有着密集的矿藏、强健的水圈和理想的农业条件。在这里进行耕作会获得意想不到的丰收。"
+ pd_wet_superhabitable_desc: "这颗超级类地星球上有着强健的水圈和理想的农业条件。其平均气温较为温暖，有着地势较浅的海洋盆地。不过，这里对于不适应强重力环境的生物会是一种折磨。"
  pd_dry_superhabitable: "超级类地世界（干燥）"
- pd_dry_superhabitable_desc: "这个干燥的超级类地星球上有着密集的矿藏、强健的水圈和理想的耕作条件。此外这里峡谷遍布，水力发电前景广阔。"
+ pd_dry_superhabitable_desc: "这颗超级类地星球上有着强健的水圈和理想的农业条件。其平均气温较为温暖，有着地势较浅的海洋盆地。不过，这里对于不适应强重力环境的生物会是一种折磨。"
  pd_cold_superhabitable: "超级类地世界（寒冷）"
- pd_cold_superhabitable_desc: "这个寒冷的超级类地星球有着密集的矿藏、强健的水圈和理想的农业条件。这里可以遇到丰富的机会进行矿产开发。"
+ pd_cold_superhabitable_desc: "这颗超级类地星球上有着强健的水圈和理想的农业条件。其平均气温较为温暖，有着地势较浅的海洋盆地。不过，这里对于不适应强重力环境的生物会是一种折磨。"
  pd_gaia_superhabitable: "超级类地世界（盖亚）"
- pd_gaia_superhabitable_desc: "这类超级类地星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
- pd_gaia_world: "盖亚世界"
- pd_gaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
+ pd_gaia_superhabitable_desc: "这类超级类地星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对高等生命都是极佳的生活空间。其平均气温较为温暖，有着地势较浅的海洋盆地。不过，这里对于不适应强重力环境的生物会是一种折磨。"
+ pd_gaia_world: "盖亚世界（湿润）"
+ pd_gaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对高等生命都是极佳的生活空间。"
  pd_wet_tidally_locked: "白昼世界"
- pd_wet_tidally_locked_desc: "这一潮汐锁定星球环境湿润，日照强烈。其恒久的光照与狂风有着广阔的应用前景。"
+ pd_wet_tidally_locked_desc: "这颗潮汐锁定星球的恒久光照和狂风有着广阔的发电前景。暮光区是仅有的宜居地带。"
  pd_dry_tidally_locked: "昏光世界"
- pd_dry_tidally_locked_desc: "恒久的光照和狂风令这颗潮汐锁定星球成为生产能源与收获作物的理想地点。"
+ pd_dry_tidally_locked_desc: "这颗潮汐锁定星球的恒久光照和狂风有着广阔的发电前景。暮光区是仅有的宜居地带。"
  pd_cold_tidally_locked: "冰洋世界"
- pd_cold_tidally_locked_desc: "这一潮汐锁定星球昼半球的强风与洋流带来稳定的能源，而夜半球罕见的冰川构造则提供了独有的研究机会。"
+ pd_cold_tidally_locked_desc: "这颗潮汐锁定星球的恒久光照和狂风有着广阔的发电前景。暮光区是仅有的宜居地带。"
  pd_gaia_tidally_locked: "潮汐锁定世界（盖亚）"
- pd_gaia_tidally_locked_desc: "这类潮汐锁定星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
- pd_wet_cave: "岩溶洞窟"
- pd_wet_cave_desc: "整个星球的地表下都是蔓延的岩洞网络，这提供了罕有的开发机会。"
- pd_dry_cave: "砂岩洞窟"
- pd_dry_cave_desc: "整个星球的地表下都是蔓延的岩洞网络，这提供了罕有的开发机会。"
- pd_cold_cave: "冰霜洞窟"
- pd_cold_cave_desc: "整个星球的地表下都是蔓延的岩洞网络，这提供了罕有的开发机会。"
+ pd_gaia_tidally_locked_desc: "这类潮汐锁定星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。其暮光区对高等生命都是极佳的生活空间。"
+ pd_wet_cave: "岩溶洞窟世界"
+ pd_wet_cave_desc: "整个星球地表下都是蔓延的岩洞网络。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。"
+ pd_dry_cave: "砂岩洞窟世界"
+ pd_dry_cave_desc: "整个星球地表下都是蔓延的岩洞网络。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。"
+ pd_cold_cave: "冰霜洞窟世界"
+ pd_cold_cave_desc: "整个星球地表下都是蔓延的岩洞网络。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。"
  pd_gaia_cave: "岩洞世界（盖亚）"
- pd_gaia_cave_desc: "这类岩洞星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
- pd_striped: "彩纹世界"
- pd_striped_desc: "干旱的环境中遍地都是沙尘，还有非常漂亮的矿物构造。"
+ pd_gaia_cave_desc: "这类岩洞星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对高等生命都是极佳的生活空间。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。"
+ pd_striped: "彩丘世界"
+ pd_striped_desc: "这里呈现出迷人的地质构造。深邃的绚烂条纹是此地的特征，为干旱多沙的环境增添了一分靓丽。"
  pd_diamond: "金刚石世界"
  pd_diamond_desc: "这里碳元素含量极高，加上高温高压条件，该星球的大部分物质都被塑造成了金刚石。"
  pd_carbon: "碳星"
- pd_carbon_desc: "不同于大部分以硅-氧作为主要组分的星球，这类星球拥有更高的碳-氧比。"
+ pd_carbon_desc: "不同于大部分以硅-氧作为主要组分的星球，这类星球拥有高得多的碳-氧比。"
  pd_chthonian: "气陨星核"
  pd_chthonian_desc: "这曾是一颗气态巨行星，但是氢氦大气层已经消失殆尽，只剩下光秃秃的金属核心。"
  pd_iron: "铁星"
@@ -194,16 +186,66 @@
  pd_hydrocarbon: "烃星"
  pd_hydrocarbon_desc: "氮气、甲烷与乙烷的云层形成了致密的晦暗大气。液态碳氢化合物构成了稳定的海洋和湖泊。"
  pd_hot_gas_giant: "热气态巨星"
- pd_hot_gas_giant_desc: "该行星的温度要比一般的气态巨行星更高，因此形成了极端的天气模式，可以用于采集能源和稀有天然气。"
+ pd_hot_gas_giant_desc: "该行星的温度要比一般气态巨行星高得多，因此形成了极端的天气模式，可以用于采集能源和稀有天然气。"
  pd_cloudless_gas_giant: "无云气态巨星"
- pd_cloudless_gas_giant_desc: "这是一颗气态行星，其大气圈无法形成覆盖整颗行星的云层，因为缺乏能形成云的恰当化学组分。"
+ pd_cloudless_gas_giant_desc: "这是一颗气态行星，其大气缺少形成云层所必须的化学组分，因而从轨道上看来毫无特征。"
  pd_cold_gas_giant: "冷气态巨星"
- pd_cold_gas_giant_desc: "该行星的温度要比一般的气态巨行星更低，因此提供了更稳定的研究条件。"
+ pd_cold_gas_giant_desc: "该气态巨行星拥有更低的温度和稳定的气流，为科研探索提供了机会。"
  pd_ethane_ocean: "乙烷海洋世界"
  pd_ethane_ocean_desc: "这里被包裹在一层液态乙烷海洋中。"
  pd_dwarf_gas: "气态矮行星"
- pd_dwarf_gas_desc: "外面是厚厚的氢氦大气层，深处则是水冰，岩石，或者水与氨构成的液态海洋。"
+ pd_dwarf_gas_desc: "外面是厚厚的氢氦大气层，深处则是水冰、岩石，以及水与氨构成的液态海洋。"
  pd_subglacial: "冰下世界"
- pd_subglacial_desc: "极低的温度与稀薄的大气使得生命无法在地表生存。坚冰之下存在有一片冰下海洋，这要得益于潮汐加热或者地热活动。"
+ pd_subglacial_desc: "厚厚的冰层、极低的温度与稀薄的大气使得生命无法在地表生存。然而，潮汐加热和地热活动在坚冰下塑造出一片冰下海洋。"
  pd_hothouse: "温室世界"
  pd_hothouse_desc: "这颗星球的大气圈正在经历一场严重的温室效应，对任何生命都足以致命。"
+ pd_arcology_superhabitable: "超级类地世界（理想城）"
+ pd_arcology_superhabitable_desc: "这颗超级类地星球整体都被都市与工业集群覆盖。其平均气温较为温暖，不过，这里对于不适应强重力环境的生物会是一种折磨。"
+ pd_arcology_tidally_locked: "潮汐锁定世界（理想城）"
+ pd_arcology_tidally_locked_desc: "这颗潮汐锁定星球整体都被都市与工业集群覆盖。暮光区是仅有的宜居地带。"
+ pd_arcology_cave: "岩洞世界（理想城）"
+ pd_arcology_cave_desc: "这颗岩洞星球整体都被都市与工业集群覆盖。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。 "
+ pd_nuked_superhabitable: "超级类地世界（死寂）"
+ pd_nuked_superhabitable_desc: "一颗大气中充斥着氮氧元素的超级类地星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。对于不适应强重力环境的生物会是一种折磨。"
+ pd_nuked_tidally_locked: "潮汐锁定世界（死寂）"
+ pd_nuked_tidally_locked_desc: "一颗大气中充斥着氮氧元素的潮汐锁定星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。暮光区是仅有的宜居地带。"
+ pd_nuked_cave: "岩洞世界（死寂）"
+ pd_nuked_cave_desc: "一颗大气中充斥着氮氧元素的岩洞星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。"
+ pd_dry_gaia_world: "盖亚世界（干燥）"
+ pd_dry_gaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
+ pd_cold_gaia_world: "盖亚世界（寒冷）"
+ pd_cold_gaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
+ pc_pd_nuked_arcology: "遗落世界（死寂）"
+ pc_pd_nuked_arcology_desc: "这曾是一座世界规模的巨城。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。"
+ pc_pd_nuked_arcology_tooltip: "宜居度：§R-100%§!\n拥有§Y$trait_pc_nuked_preference$§!或§Y$trait_survivor$§!特质时，宜居度：§G+100%§!"
+ decision_engineered_environment_gaia: "星球塑形工程"
+ decision_engineered_environment_gaia_desc: "我们会动用高级环境改造手段，将这颗星球塑造成一个天堂，创造出极其适宜高等生命的宜人环境。"
+ engineered_environment_gaia: "完美塑形世界"
+ engineered_environment_gaia_desc: "先进的环境改造技术重塑了这颗星球，这里的生态系统对高等生命而言是极佳的生存空间。"
+ pd_crevasse: "冰裂世界"
+ pd_crevasse_desc: "尽管冰层表面环境极其恶劣，却有从地核中涌出的热能，在冰层深处塑成了众多条件适宜生存的裂谷。"
+ pd_uncommon_gaia_world: "盖亚世界"
+ pd_uncommongaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
+ pd_ice_dunes: "冰尘世界"
+ pd_ice_dunes_desc: "温度常年低于冰点，冰粒如沙，堆聚成丘。 "
+ pd_algae: "粉藻世界"
+ pd_algae_desc: "该星球上众多浅海和湖泊供养着绚丽的粉色藻华，这番壮丽之景在太空中也能看得一清二楚。"
+ pd_hive_superhabitable: "$pc_pd_hive_superhabitable$"
+ pd_hive_superhabitable_desc: "$pc_pd_hive_superhabitable_desc$"
+ pd_hive_cave: "$pc_pd_hive_cave$"
+ pd_hive_cave_desc: "$pc_pd_hive_cave_desc$"
+ pd_hive_tidally_locked: "$pc_pd_hive_tidally_locked$"
+ pd_hive_tidally_locked_desc: "$pc_pd_hive_tidally_locked_desc$"
+ pd_machine_superhabitable: "$pc_pd_machine_superhabitable$"
+ pd_machine_superhabitable_desc: "$pc_pd_machine_superhabitable_desc$"
+ pd_machine_cave: "$pc_pd_machine_cave$"
+ pd_machine_cave_desc: "$pc_pd_machine_cave_desc$"
+ pd_machine_tidally_locked: "$pc_pd_machine_tidally_locked$"
+ pd_machine_tidally_locked_desc: "$pc_pd_machine_tidally_locked_desc$"
+ pd_aerial: "浮种世界"
+ pd_aerial_desc: "独特的植物孕育出巨大的种荚，如云般飘荡在植被繁茂的陆地上空。"
+ pd_sandstone: "砂岩世界"
+ pd_sandstone_desc: "这里有着广袤的草原和风蚀砂岩构造。水圈维系着顽强的草本植物，后者已然适应这里的环境。"
+ pd_blossom: "花簇世界"
+ pd_blossom_desc: "丰沃的草原上点缀着怒放的花卉，这番壮丽之景在轨道上也能看得一清二楚。"
+ pd_lilypad: "This planet's warm, shallow oceans support vibrant biodiversity. At the surface, sturdy leaves from aquatic flora form a secondary surface-based ecosystem."
