--- a/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_capital_l_simp_chinese.yml
+++ b/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_capital_l_simp_chinese.yml
@@ -1,36 +1,26 @@
 ﻿l_simp_chinese:
-
-#Senate
- decision_pd_arcology_senate: "Build Senate Dome"
- decision_pd_arcology_senate_desc: "To meet the expanding needs of our nation, we must construct a monumental senate building on our capital, dedicating substantial space to enhance our government's administration capabilities."
- decision_pd_arcology_senate_effects: "Adds the §Y$d_pd_senate_building$§! to this capital, exhanging potential distrticts to enhance our government's administration capabilities."
- d_pd_senate_building: "Senate Dome"
- d_pd_senate_building_desc: "The Senate Dome, a majestic symbol of governance, stands tall as the administrative heart where our civilization's future is forged."
-
-#Palace
- decision_pd_arcology_palace: "Build Palatial Complex"
- decision_pd_arcology_palace_desc: "To reflect the might and authority of our empire, we shall erect a colossal palace within our capital. This grand edifice will embody the power of our leadership and significantly augment our governmental administration."
- decision_pd_arcology_palace_effects: "Adds the §Y$d_pd_palace_building$§! to this capital, exhanging potential distrticts to enhance our government's administration capabilities."
- d_pd_palace_building: "Palatial Complex"
- d_pd_palace_building_desc: "The Palace Complex, a grand symbol of our sovereignty and ruler's power, dominates the capital. It is the heart of governance, where our empire's destiny is shaped."
-
-#Headquarters
- decision_pd_arcology_headquarters: "Build Planetary Headquarters"
- decision_pd_arcology_headquarters_desc: "To showcase the power and influence of our megacorporation, we will construct a towering headquarters in this economic hub. This imposing structure will represent our leadership's strength and greatly enhance our galatic operations."
- decision_pd_arcology_headquarters_effects: "Adds the §Y$d_pd_headquarters_building$§! to this capital, exhanging potential distrticts to enhance our corporation's administration capabilities."
- d_pd_headquarters_building: "Planetary Headquarters"
- d_pd_headquarters_building_desc: "A monumental symbol of dominanct, this headquarters towers over the planet. It serves as the nerve center for our operations, where the future of our megacorporation is crafted."
-
-#Hive Confluence Spire
- decision_pd_hive_confluence_spire: "Build Confluence Spire"
- decision_pd_hive_confluence_spire_desc: "To manifest the supremacy and reach of our collective, we shall grow a mighty confluence spire. This commanding structure will significantly amplify our operations across the stars."
- decision_pd_hive_confluence_spire_effects: "Adds the §Y$d_pd_confluence_spire_building$§! to this capital, exhanging potential distrticts to enhance our administration capabilities."
- d_pd_confluence_spire_building: "Confluence Spire"
- d_pd_confluence_spire_building_desc: "This spire stands supreme across the planet's surface, a towering beacon of control. It is the hub of our collective will, where our path among the stars is intricately woven."
-
-#Machine Centralized Processing
- decision_pd_machine_centralized_processing: "Build Centralized Processing Unit"
- decision_pd_machine_centralized_processing_desc: "To assert our superiority and extend operational capacity, we will construct a Centralized Processing Unit. This structure will significantly boost our galactic functions."
- decision_pd_machine_centralized_processing_effects: "Adds the §Y$d_pd_machine_centralized_processing$§! to this capital, exhanging potential distrticts to enhance our administration capabilities."
- d_pd_machine_centralized_processing: "Centralized Processing Unit"
- d_pd_machine_centralized_processing_desc: "This processing unit dominates the planetary surface and is the central node for our collective directives, intricately orchestrating our drones."
+ decision_pd_arcology_senate: "建造穹状大议会"
+ decision_pd_arcology_senate_desc: "为满足日益庞杂的国务需要，须在首都建造一座宏伟的议会大厦，这给增进政府行政效能提供了充裕的空间。"
+ decision_pd_arcology_senate_effects: "在首都添加§Y$d_pd_senate_building$§!，转化未开发区划以提升政府的行政能力。"
+ d_pd_senate_building: "穹状大议会"
+ d_pd_senate_building_desc: "穹状大议会是政权的雄伟象征，作为行政中枢巍然屹立，于此筑就我们文明的未来。"
+ decision_pd_arcology_palace: "建造宏大宫城"
+ decision_pd_arcology_palace_desc: "为昭示帝国的实力和权威，须在首都建造一座庞大的宫殿。这栋宏伟的大厦会彰显领袖的权力，并显著提升政府的行政水平。"
+ decision_pd_arcology_palace_effects: "在首都添加§Y$d_pd_palace_building$§!，转化未开发区划以提升政府的行政能力。"
+ d_pd_palace_building: "宏大宫城"
+ d_pd_palace_building_desc: "宏大宫城，统治力与领袖权威的伟大象征，睥睨首都的存在。此乃统治之中枢，帝国的命运于此铸就。"
+ decision_pd_arcology_headquarters: "建造行星总公司"
+ decision_pd_arcology_headquarters_desc: "为了展现巨企的实力和影响力，我们要在这个经济中枢建造一座高耸的总部大厦。这座宏伟的建筑将展示我们的领导力，并大幅提升在星海内的业务水平。"
+ decision_pd_arcology_headquarters_effects: "在首都添加§Y$d_pd_headquarters_building$§!，转化未开发区划以提升政府的行政能力。"
+ d_pd_headquarters_building: "行星总公司"
+ d_pd_headquarters_building_desc: "作为不朽的统治象征，总部大厦在星球之上巍然屹立。这是处理我们业务的神经中枢，于此塑造巨企的未来。"
+ decision_pd_hive_confluence_spire: "建造汇流尖塔"
+ decision_pd_hive_confluence_spire_desc: "为彰显集体的卓越和影响，我们要建造一座强大的汇流尖塔。这一指挥结构会显著提升我们在群星间的行动能力。"
+ decision_pd_hive_confluence_spire_effects: "在首都添加§Y$d_pd_confluence_spire_building$§!，转化未开发区划以提升政府的行政能力。"
+ d_pd_confluence_spire_building: "汇流尖塔"
+ d_pd_confluence_spire_building_desc: "这座尖塔在星球表面上格外显眼，是象征着支配的宏伟信标。这是我们集体思维的中枢，我们的星海之路于此交缠。"
+ decision_pd_machine_centralized_processing: "建造中枢处理器"
+ decision_pd_machine_centralized_processing_desc: "为维持优势并拓展行动能力，我们将建造一座中枢处理器。这一建筑会显著提升我们的星海机能。"
+ decision_pd_machine_centralized_processing_effects: "在首都添加§Y$d_pd_machine_centralized_processing$§!，转化未开发区划以提升政府的行政能力。"
+ d_pd_machine_centralized_processing: "中枢处理器"
+ d_pd_machine_centralized_processing_desc: "这一处理单元支配着星球地表，乃是我们的核心集体指令中枢，统筹协调复杂的子个体活动。"
