--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_l_simp_chinese.yml
@@ -1,12 +1,6 @@
 ﻿l_simp_chinese:
-
-#Terraforming Warning
- pd_planet_no_terraform: "$TRIGGER_FAIL$ This planet cannot be terraformed with standard procedures."
-
-###Arcology/Relic
- pc_pd_nuked_arcology: "Nuked Relic World"
- pc_pd_nuked_arcology_desc: "A city once stretched across this entire world. It is experiencing a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation. Minimal signs of life."
- pc_pd_nuked_arcology_tooltip: "Habitability: §R-100%§!\nHabitability: §G+100%§! with §Y$trait_pc_nuked_preference$§! or §Y$trait_survivor$§! trait"
-
-###Dummy Class Warning
- DO_NOT_USE: "DUMMY CLASS - DO NOT USE"
+ pd_planet_no_terraform: "$TRIGGER_FAIL$该行星无法通过正常的流程进行环境改造。"
+ pc_pd_nuked_arcology: "遗落世界（死寂）"
+ pc_pd_nuked_arcology_desc: "这曾是一座世界规模的巨城。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。"
+ pc_pd_nuked_arcology_tooltip: "宜居性：§R-100%§!\n如有§Y$trait_pc_nuked_preference$§!或§Y$trait_survivor$§!特质，宜居性：§G+100%§!"
+ DO_NOT_USE: "占位符，未使用"
