--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_planetary_infesters_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_planetary_infesters_l_simp_chinese.yml
@@ -1,30 +1,21 @@
 ﻿l_simp_chinese:
-
-###Planetary Infesters
-#Civic
- civic_hive_pd_planetary_infesters: "Planetary Infesters"
- civic_hive_pd_planetary_infesters_desc: "This hive mind embeds itself into a planet's ecosystems. Each world becomes an extension of itself, flourishing as a unified network under its guidance."
- civic_tooltip_pd_planetary_infesters_effects: "Can build £building£ $building_pd_aw_planet_infester_1$\n- $building_pd_planet_infestor_desc$\n- Homeworld is a $pc_hive$"
-
-#Buildings
- building_pd_planet_infestor_desc: "§YInfesting Nodes§! evolve through three upgrade phases, progressively converting the planet into a §YHive World§!."
- building_pd_aw_planet_infester_1: "Infestation Node - First Phase"
- building_pd_aw_planet_infester_1_desc: "This node, the heart of the initial infestation stage, is vital to the hive's presence on this planet. Its loss would unravel the hive's grip here."
- building_pd_aw_planet_infester_2: "Infestation Node - Second Phase"
- building_pd_aw_planet_infester_2_desc: "This massive node, now in the intermediate infestation stage, wields a connection to the hive robust enough to manipulate critical planetary processes. Its loss would unravel the hive's grip here."
- building_pd_aw_planet_infester_3: "Planetary Infestation Node"
- building_pd_aw_planet_infester_3_desc: "Having reached its zenith, this formidable node exerts total dominion over all planetary processes. Its loss would unravel the hive's grip here."
- building_pd_aw_planet_infester_3_effect_desc: "This planet will be transformed into a §Y$pc_hive$§!."
-
-#Dummy Class
+ civic_hive_pd_planetary_infesters: "行星感染体"
+ civic_hive_pd_planetary_infesters_desc: "这一蜂巢思维将自己整合入星球生态系统内。每个星球都会成为它的延展，在它的指引下作为统一的网络繁荣不息。"
+ civic_tooltip_pd_planetary_infesters_effects: "可以建造£building£ $building_pd_aw_planet_infester_1$\n—$building_pd_planet_infestor_desc$\n—母姓为$pc_hive$"
+ building_pd_planet_infestor_desc: "§Y感染节点§!会通过三个升级阶段逐步将星球转变为§Y蜂巢星球§!。"
+ building_pd_aw_planet_infester_1: "感染节点——第一阶段"
+ building_pd_aw_planet_infester_1_desc: "这个节点是初始感染阶段的核心，对蜂巢在这个星球的存在至关重要。失去它，蜂巢就会失去对这里的掌控。"
+ building_pd_aw_planet_infester_2: "感染节点——第二阶段"
+ building_pd_aw_planet_infester_2_desc: "这个巨大的节点现在正处于中期感染节点，它与蜂巢的连接足够坚固，能够操纵关键的星球进程。失去它，蜂巢就会失去对这里的掌控。"
+ building_pd_aw_planet_infester_3: "行星感染节点"
+ building_pd_aw_planet_infester_3_desc: "这个强大的节点已经抵达顶点，对所有行星进程都施加了完全的控制，失去它，蜂巢就会失去对这里的掌控。"
+ building_pd_aw_planet_infester_3_effect_desc: "这颗星球会被改造为§Y$pc_hive$§!"
  pc_hive_dummy: "$pc_hive$"
  pc_hive_dummy_desc: "$pc_hive_desc$"
  pc_hive_dummy_adj: "$pc_hive_adj$"
  mod_pc_hive_dummy_habitability: "$mod_pc_hive_habitability$"
  trait_pc_hive_dummy_preference: "$trait_pc_hive_preference$"
  trait_pc_hive_dummy_preference_desc: "$trait_pc_hive_preference_desc$"
-
-#Events
- pdawplanetaryinfesters.120.name: "Planetary Hive Complete"
- pdawplanetaryinfesters.120.desc: "As the node reaches its full potential, we resonate with a profound sense of accomplishment.\n\nThis moment marks a significant leap in the hive's conrol of [Root.GetName], solidifying its grasp over the planet."
- pdawplanetaryinfesters.120.a: "Another home for the hive."
+ pdawplanetaryinfesters.120.name: "行星蜂巢已完成"
+ pdawplanetaryinfesters.120.desc: "随着节点完全发挥力量，我们产生了深刻的成就感。\n\n这一刻标志着蜂巢对[Root.GetName]的控制迈出巨大一步，蜂巢对星球的掌控愈加稳固。"
+ pdawplanetaryinfesters.120.a: "蜂巢的另一个家园。"
