--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_shroud_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_shroud_l_simp_chinese.yml
@@ -1,30 +1,21 @@
 ﻿l_simp_chinese:
-
-###Shroud Planets
-#AP
- ap_pd_shroud_worlds: "Unregulated Industrialism"
- ap_pd_shroud_worlds_desc: "In pursuing unrestrained productivity, we must cast aside environmental constraints to unlock the planet's true industrial potential."
- allow_shroud_worlds: "§YUnlocks Decision:§! $decision_pd_aw_shroud_planet$ on non-ideal planets"
- describe_shroud_worlds: "§Y$decision_pd_aw_shroud_planet$§! modifier:\n$t$- Unlocks £district£ §YGenerator Districts§! and §YMining District§!\n$t$- Blocks all §YAgriculture Districts§!\n$t$- $MOD_HABITABILITY_CEIL$: §Y60%§!\n$t$- $mod_planet_jobs_alloys_produces_mult$: §G100%§!\n$t$- $mod_planet_jobs_consumer_goods_produces_mult$: §G100%§!\n$t$- $mod_planet_chemists_produces_mult$: §G50%§!\n$t$- $mod_planet_refiners_produces_mult$: §G50%§!\n$t$- $mod_planet_translucers_produces_mult$: §G50%§!"
-
-#Decisions
- decision_pd_aw_shroud_planet: "Shroud Phasing"
- decision_pd_aw_shroud_planet_desc: "We can weaken the barrier between this planet and the Shroud and create a balance between the material and psionic realms."
- decision_pd_aw_shroud_planet_effects_short: "§Y$pd_aw_shroud_planet$§! modifier added.\n\nIncreases £pop£ §GPsionic Pop Output§! but reduces £pop£ §YNon-Psionic Pop Output§!."
- decision_pd_aw_shroud_planet_cleanup: "Phase-Lock Planet"
- decision_pd_aw_shroud_planet_cleanup_desc: "Our physicists can strengthen the barrier between this planet and the Shroud, locking it in the material realm."
- decision_pd_aw_shroud_planet_cleanup_tooltip: "\nWe will remove the psionic influence from this planet."
-
-#Modifiers
- pd_aw_shroud_planet: "Shroud Touched"
- pd_aw_shroud_planet_desc: "In this place, the deliberately weakened barrier between the material realm and the Shroud has enabled individuals with psychic abilities to reshape reality to a certain extent. However, for those without such gifts, the line between nightmare and reality blurs, giving rise to an endless tapestry of suffering and torment."
- pd_aw_shroud_planet_tooltip: "§GPsionic§! £pop£ Pops:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-Psionic§! £pop£ Pops:\n- £mod_pop_environment_tolerance£ §YPlanet Habitability§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§!"
+ ap_pd_shroud_worlds: "无节制工业"
+ ap_pd_shroud_worlds_desc: "为追求不受限制的生产力，我们必须抛开环境限制，充分发掘星球的工业潜力。"
+ allow_shroud_worlds: "§Y解锁决议：§!在非理想星球使用$decision_pd_aw_shroud_planet$"
+ describe_shroud_worlds: "§Y$decision_pd_aw_shroud_planet$§!修正：\n$t$—解锁£district£ §Y发电区划§!和§Y采矿区划§!\n$t$—禁用所有§Y农业区划§!\n$t$—$MOD_HABITABILITY_CEIL$：§Y60%§!\n$t$—$mod_planet_jobs_alloys_produces_mult$：§G100%§!\n$t$—$mod_planet_jobs_consumer_goods_produces_mult$§G100%§!\n$t$—$mod_planet_chemists_produces_mult$：§G50%§!\n$t$—$mod_planet_refiners_produces_mult$：§G50%§!\n$t$—$mod_planet_translucers_produces_mult$：§G50%§!"
+ decision_pd_aw_shroud_planet: "虚境相变"
+ decision_pd_aw_shroud_planet_desc: "我们可以削弱该星球与虚境的分界，在物质世界和灵能世界之间建立平衡。"
+ decision_pd_aw_shroud_planet_effects_short: "已添加§Y$pd_aw_shroud_planet$§!修正。\n\n提升£pop£ §G灵能人口的产出§!，但是会降低£pop£ §Y非灵能人口的产出§!。"
+ decision_pd_aw_shroud_planet_cleanup: "锁相星球"
+ decision_pd_aw_shroud_planet_cleanup_desc: "我们的物理学家可以强化此星球与虚境之间的分界，将它锁在物质世界中。"
+ decision_pd_aw_shroud_planet_cleanup_tooltip: "\n我们会移除来自该星球的灵能影响。"
+ pd_aw_shroud_planet: "触碰虚境"
+ pd_aw_shroud_planet_desc: "在这里，物质世界与虚境的分界被故意削弱，使具备灵能能力的个体能够在一定程度上重塑现实。然而，对那些不具备此等天赋的人而言，噩梦与现实的界限变得模糊起来，诱发了无尽的痛苦和折磨。"
+ pd_aw_shroud_planet_tooltip: "§G灵能§! £pop£ 人口\n—$mod_planet_psionic_jobs_produces_mult$：§G10%§!\n—$MOD_POP_HAPPINESS$：§G10%§!\n\n§Y非灵能§! £pop£ 人口\n—£mod_pop_environment_tolerance£ §Y星球宜居性§!：§R-50%§!\n—$MOD_POP_HAPPINESS$：§R-25%§!\n—$MOD_POP_GROWTH_SPEED$：§R-25%§!"
  pd_shroud_planet: "$pd_aw_shroud_planet$"
  pd_shroud_planet_desc: "$pd_aw_shroud_planet_desc$"
  pd_shroud_planet_tooltip: "$pd_aw_shroud_planet_tooltip$"
-
-#Notification Message
- MESSAGE_PD_AW_SHROUD_DESC:1 "$PLANET|Y$ is now §Y$pd_aw_shroud_planet$§!"
- MESSAGE_PD_AW_SHROUD_MESSAGE_TYPE_TITLE: "Planetary Shroud Communion Complete"
- MESSAGE_PD_AW_SHROUD_CLEANUP_DESC:1 "The influence of the Shourd has been removed on $PLANET|Y$."
- MESSAGE_PD_AW_SHROUD_CLEANUP_MESSAGE_TYPE_TITLE: "Planet Unshrouded"
+ MESSAGE_PD_AW_SHROUD_DESC:1 "$PLANET|Y$现在已是§Y$pd_aw_shroud_planet$§!"
+ MESSAGE_PD_AW_SHROUD_MESSAGE_TYPE_TITLE: "完成星球虚境交流"
+ MESSAGE_PD_AW_SHROUD_CLEANUP_DESC:1 "$PLANET|Y$上的虚境影响会被清除。"
+ MESSAGE_PD_AW_SHROUD_CLEANUP_MESSAGE_TYPE_TITLE: "从虚境剥离星球"
