--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_wasteland_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_wasteland_l_simp_chinese.yml
@@ -1,30 +1,21 @@
 ﻿l_simp_chinese:
-
-###Wasteland Planets
-#AP
- ap_pd_wasteland_worlds: "Unregulated Industrialism"
- ap_pd_wasteland_worlds_desc: "In pursuing unrestrained productivity, we must cast aside environmental constraints to unlock the planet's true industrial potential."
- allow_wasteland_worlds: "§YUnlocks Decision:§! $decision_pd_aw_wasteland_planet$ on non-ideal planets"
- describe_wasteland_worlds: "§Y$decision_pd_aw_wasteland_planet$§! modifier:\n$t$- Unlocks £district£ §YGenerator Districts§! and §YMining District§!\n$t$- Blocks all §YAgriculture Districts§!\n$t$- $MOD_HABITABILITY_CEIL$: §Y60%§!\n$t$- $mod_planet_jobs_alloys_produces_mult$: §G100%§!\n$t$- $mod_planet_jobs_consumer_goods_produces_mult$: §G100%§!\n$t$- $mod_planet_chemists_produces_mult$: §G50%§!\n$t$- $mod_planet_refiners_produces_mult$: §G50%§!\n$t$- $mod_planet_translucers_produces_mult$: §G50%§!"
-
-#Decisions
- decision_pd_aw_wasteland_planet: "Unregulated Industrial Standards"
- decision_pd_aw_wasteland_planet_desc: "Environmental concerns do nothing but hold us back. By ignoring the state of the planet's natural ecosystem, we will unlock the planet's true industrial potential."
- decision_pd_aw_wasteland_planet_effects_short: "§Y$pd_aw_wasteland_planet$§! modifier added.\n\nIncreases §GIndustrial Output§! but reduces £mod_pop_environment_tolerance£ §RHabitability§!."
- decision_pd_aw_wasteland_planet_cleanup: "Environmental Clean Up"
- decision_pd_aw_wasteland_planet_cleanup_desc: "The severe environmental degradation on this planet has left its ecosystem in a precarious state. We will rectify the damage inflicted upon this world."
- decision_pd_aw_wasteland_planet_cleanup_tooltip: "We will restore this planet's original ecosystem."
-
-#Modifiers
- pd_aw_wasteland_planet: "Industrial Wasteland"
+ ap_pd_wasteland_worlds: "无节制工业"
+ ap_pd_wasteland_worlds_desc: "为追求不受限制的生产力，我们必须抛开环境限制，充分发掘星球的工业潜力。"
+ allow_wasteland_worlds: "§Y解锁决议：§!在非理想星球使用$decision_pd_aw_wasteland_planet$"
+ describe_wasteland_worlds: "§Y$decision_pd_aw_wasteland_planet$§!修正：\n$t$—解锁£district£ §Y发电区划§!和§Y采矿区划§!\n$t$—禁用所有§Y农业区划§!\n$t$—$MOD_HABITABILITY_CEIL$：§Y60%§!\n$t$—$mod_planet_jobs_alloys_produces_mult$：§G100%§!\n$t$—$mod_planet_jobs_consumer_goods_produces_mult$：§G100%§!\n$t$—$mod_planet_chemists_produces_mult$：§G50%§!\n$t$—$mod_planet_refiners_produces_mult$：§G50%§!\n$t$—$mod_planet_translucers_produces_mult$：§G50%§!"
+ decision_pd_aw_wasteland_planet: "无管制工业标准"
+ decision_pd_aw_wasteland_planet_desc: "环境问题只会阻碍我们前进。忽略该星球的自然生态系统，我们会解放它真正的工业潜力。"
+ decision_pd_aw_wasteland_planet_effects_short: "已添加§Y$pd_aw_wasteland_planet$§!修正。\n\n会增加§G工业产出§!，但是会降低£mod_pop_environment_tolerance£ §R宜居性§!。"
+ decision_pd_aw_wasteland_planet_cleanup: "环境清理"
+ decision_pd_aw_wasteland_planet_cleanup_desc: "该星球严重的环境退化使其生态系统处于岌岌可危的状态。我们会纠治星球曾遭受的损害。"
+ decision_pd_aw_wasteland_planet_cleanup_tooltip: "我们会修复该星球原本的生态系统。"
+ pd_aw_wasteland_planet: "工业废土"
  pd_aw_wasteland_planet_desc: "$decision_pd_aw_wasteland_planet_desc$"
- pd_aw_wasteland_planet_tooltip: "Unlocks £district£ §YGenerator Districts§! and §YMining District§!\nBlocks all §YAgriculture Districts§!"
- pd_wasteland_planet: "Industrial Wasteland"
+ pd_aw_wasteland_planet_tooltip: "解锁£district£ §Y发电区划§!和§Y采矿区划§!\n禁用所有§Y农业区划§!"
+ pd_wasteland_planet: "工业废土"
  pd_wasteland_planet_desc: "$pd_aw_wasteland_planet_desc$"
- pd_wasteland_planet_tooltip: "Unlocks £district£ §YGenerator Districts§! and §YMining District§!\nBlocks all §YAgriculture Districts§!"
-
-#Notification Message
- MESSAGE_PD_AW_WASTELAND_DESC:1 "$PLANET|Y$ now has §Y$decision_pd_aw_wasteland_planet$§!"
- MESSAGE_PD_AW_WASTELAND_MESSAGE_TYPE_TITLE: "Environmental Regulations Abolished"
- MESSAGE_PD_AW_WASTELAND_CLEANUP_DESC:1 "The ecosystem on $PLANET|Y$ has been repaired."
- MESSAGE_PD_AW_WASTELAND_CLEANUP_MESSAGE_TYPE_TITLE: "Environmental Regulations Returned"
+ pd_wasteland_planet_tooltip: "解锁£district£ §Y发电区划§!和§Y采矿区划§!\n禁用所有§Y农业区划§!"
+ MESSAGE_PD_AW_WASTELAND_DESC:1 "$PLANET|Y$现在拥有§Y$decision_pd_aw_wasteland_planet$§!"
+ MESSAGE_PD_AW_WASTELAND_MESSAGE_TYPE_TITLE: "已废除环境法规"
+ MESSAGE_PD_AW_WASTELAND_CLEANUP_DESC:1 "$PLANET|Y$的生态系统修复完成。"
+ MESSAGE_PD_AW_WASTELAND_CLEANUP_MESSAGE_TYPE_TITLE: "重新采纳环境法规"
